--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -29,10 +29,8 @@
     </dl>
     <dl><dt/><dd/></dl>
 
-    <h id="mixed" class="break" title="Mixed drinks…">Mixed drinks</h>
+    <h id="mixed" class="break" title="Mixed drinks, Apéritifs and Sparkling Wines…">Mixed drinks, Apéritifs and Sparkling Wines</h>
     <desc>n/a</desc>
-    <!--     <desc>U obsluhy je možné si vyžádat lístek míchaních nápojů, na kterém jsou jednotlivé
-nápoje detailněji popsány včetně složení.</desc> -->
     <dl class="meal meal-oneline">
       <dt>Crodino Spritz</dt>
       <dd class="price">CZK 60</dd>
@@ -52,12 +50,6 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Mojito</dt>
       <dd class="price">CZK 90</dd>
       <dd>Havana 3 YO light rum, soda, cane sugar, lime, mint, ice</dd>
-    </dl>
-    <dl><dt/><dd/></dl>
-
-    <h id="aperitifs" title="Aperitifs, sparkling wines…">Apéritifs, sparkling wines</h>
-    <desc>n/a</desc>
-    <dl class="meal meal-oneline">
       <dt>Cinzano Bianco <span>0.1 L</span></dt>
       <dd class="price">CZK 45</dd>
       <dt>Campari <span>0.05 L</span></dt>
@@ -86,8 +78,6 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd>(original, light, zero)</dd>
       <dt>Fanta orange <span>0.33 L</span></dt>
       <dd class="price">CZK 38</dd>
-    </dl>
-    <dl class="meal meal-oneline">
       <dt>Sprite <span>0.33 L</span></dt>
       <dd class="price">CZK 38</dd>
       <dt>Kinley tonic <span>0.25 L</span></dt>
@@ -100,8 +90,6 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Bonaqua <span>0.25 L</span></dt>
       <dd class="price">CZK 26</dd>
       <dd>(sparkling, mild, still)</dd>
-    </dl>
-    <dl class="meal meal-oneline">
       <dt>Red Bull <span>0.25 L</span></dt>
       <dd class="price">CZK 60</dd>
       <dt>Römerquelle <span>0.33 L</span></dt>
@@ -130,8 +118,6 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">CZK 45</dd>
       <dt>Café Vienna</dt>
       <dd class="price">CZK 43</dd>
-    </dl>
-    <dl class="meal meal-oneline">
       <dt>Wiener Melange</dt>
       <dd class="price">CZK 43</dd>
       <dt>Eggnog latté</dt>
@@ -140,8 +126,6 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">CZK 30</dd>
       <dt>Iced coffee with ice cream</dt>
       <dd class="price">CZK 70</dd>
-    </dl>
-    <dl class="meal meal-oneline">
       <dt>Montecelio loose teas</dt>
       <dd class="price">CZK 47</dd>
       <dd>(fruit, black – Earl Grey, rooibos, green)</dd>
@@ -177,8 +161,6 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">CZK 90</dd>
       <dt>Angostura 5 YO</dt>
       <dd class="price">CZK 60</dd>
-    </dl>
-    <dl class="meal meal-oneline">
       <dt>Angostura 7 YO</dt>
       <dd class="price">CZK 80</dd>
       <dt>Kraken Black Spiced</dt>
@@ -210,8 +192,6 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">CZK 50</dd>
       <dt>Tanquearay</dt>
       <dd class="price">CZK 60</dd>
-    </dl>
-    <dl class="meal meal-oneline">
       <dt>Fernet / Fernet Citrus</dt>
       <dd class="price">CZK 35</dd>
       <dt>Becherovka</dt>
@@ -220,8 +200,6 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">CZK 50</dd>
       <dt>Brandy eggnog</dt>
       <dd class="price">CZK 30</dd>
-    </dl>
-    <dl class="meal meal-oneline">
       <dt>Tullamore Dew</dt>
       <dd class="price">CZK 60</dd>
       <dt>Jack Daniel's Honey</dt>
