--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h id="about_us">About Us</h>
     <desc>Since 2005, our unique Czech restaurant concept has filled the gap between all the fast food restaurants and expensive so-called luxury restaurants.</desc>
     <ul class="button-list">
-      <li><a class="button button-img button-img-inline" href="https://goo.gl/maps/oNFr6HEc4pF2"><span class="fas fa-3x fa-street-view">i</span>3D virtual tour</a></li>
+      <li><a class="button button-img button-img-inline" href="https://goo.gl/maps/oNFr6HEc4pF2"><span class="fal fa-3x fa-street-view">i</span>3D virtual tour</a></li>
       <li><a class="button" href="#concept">Restaurant concept</a></li>
       <li><a class="button" href="#steaks">Our steaks</a></li>
       <li><a class="button" href="#video-archives">Video archives</a></li>
