--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         <dt><img src="/files/thumbs/design/klima.png" alt="M. D. Klíma"/></dt>
         <dd><q>Give people what they want and what they deserve for their money.</q></dd>
         <dd>— <a href="#concept">M. D. Klíma, Founder of the STEAKGRILL® Concept</a></dd>
+        <dd><span class="fas fa-3x fa-quote-right">i</span></dd>
       </dl>
       <h id="regular_menu" src="stala_nabidka.html">Regular menu</h>
       <desc>Regular menu not available</desc>
