--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -235,7 +235,7 @@
       <dd class="price">CZK 33</dd>
     </dl>
 
-    <h class="afterimg break" id="kids_dishes">Kids’ Dishes</h>
+    <h class="afterimg break" id="kids_dishes">Kids’ Menu</h>
     <desc>We offer smaller servings for our youngest diners. These dishes are suitable for kids up to 12.</desc>
     <dl class="meal">
       <dt>Pirate Treasure</dt>
