--- a/index.html
+++ b/index.html
@@ -144,17 +144,24 @@
     </ul>
     
     <dl class="card card-emph">
-      <dt>Open Daily</dt>
-      <dd>Open daily from 11 am to 10 pm, Fridays and Saturdays until 11 pm</dd>
-<!--
-      <dd>Račiněves 189, 413 01 Roudnice nad Labem (<a href="https://www.google.com/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1" title="Go to Google Maps">map</a>)</dd>
-      <dd><a href="mailto:restaurant@steakgrill.cz">restaurant@steakgrill.cz</a></dd>
-      <dd var="inputvar-rezervace">n/a</dd>
--->
+      <dt>Opening hours</dt>
+      <dd>Open daily from 11 am to 10 pm,</dd>
+      <dd>Fridays and Saturdays until 11 pm.</dd>
+      <dt>Guest information</dt>
+      <dd>Debit cards are accepted</dd>
+      <dd>Children are welcome</dd>
+      <dd>WiFi is available in whole area</dd>
+      <dd>Air conditioned spaces</dd>
+      <dd>Dogs are welcome</dd>
     </dl>
     <dl class="card card-emph">
-      <dt>Booking</dt>
-      <dd>Bookings are accepted only by telephone at <a href="tel:+420777330050">+420 777 330 050</a></dd>
+      <dt>Bookings up to 14 persons</dt>
+      <dd>Only by telephone at <a href="tel:+420777330050">+420 777 330 050</a></dd>
+      <dd>Bookings are preserved for 30 minut. Thank you for understanding.</dd>
+      <dt>Bookings 15 to 30 persons</dt>
+      <dd>Contact manager, Tomáš Lisec at <a href="tel:+420607515901">+420 607 515 901</a> or <a class="emailbreaker" href="mailto:lisec@steakgrill.cz"><span class="addr">lisec@steakgrill.cz</span></a></dd>
+      <dt>Bookings above 30 persons</dt>
+      <dd>Contact owner, Jaroslav Honzajk at <a href="tel:+420777727362">+420 777 727 362</a> or <a class="emailbreaker" href="mailto:honzajk@steakgrill.cz"><span class="addr">honzajk@steakgrill.cz</span></a></dd>
     </dl>
 <!--
     <dl>
