--- a/index.html
+++ b/index.html
@@ -155,13 +155,11 @@
       <dd>Dogs are welcome</dd>
     </dl>
     <dl class="card card-emph">
-      <dt>Bookings up to 14 persons</dt>
-      <dd>Only by telephone at <a href="tel:+420777330050">+420 777 330 050</a></dd>
+      <dt>Bookings</dt>
+      <dd>Up to 14 persons: only by telephone at <a href="tel:+420777330050">+420 777 330 050</a></dd>
+      <dd>15 to 30 persons: Tomáš Lisec at <a href="tel:+420607515901">+420 607 515 901</a> or <a class="emailbreaker" href="mailto:lisec@steakgrill.cz"><span class="addr">lisec@steakgrill.cz</span></a></dd>
+      <dd>Above 30 persons: Jaroslav Honzajk at <a href="tel:+420777727362">+420 777 727 362</a> or <a class="emailbreaker" href="mailto:honzajk@steakgrill.cz"><span class="addr">honzajk@steakgrill.cz</span></a></dd>
       <dd>Bookings are preserved for 30 minut. Thank you for understanding.</dd>
-      <dt>Bookings 15 to 30 persons</dt>
-      <dd>Contact manager, Tomáš Lisec at <a href="tel:+420607515901">+420 607 515 901</a> or <a class="emailbreaker" href="mailto:lisec@steakgrill.cz"><span class="addr">lisec@steakgrill.cz</span></a></dd>
-      <dt>Bookings above 30 persons</dt>
-      <dd>Contact owner, Jaroslav Honzajk at <a href="tel:+420777727362">+420 777 727 362</a> or <a class="emailbreaker" href="mailto:honzajk@steakgrill.cz"><span class="addr">honzajk@steakgrill.cz</span></a></dd>
     </dl>
 <!--
     <dl>
