--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
     </dl>
     <dl class="card card-emph">
       <dt>Bookings</dt>
-      <dd>Up to 14 persons: only by telephone at <a href="tel:+420777330050">+420 777 330 050</a></dd>
-      <dd>15 to 30 persons: Tomáš Lisec at <a href="tel:+420607515901">+420 607 515 901</a> or <a class="emailbreaker" href="mailto:lisec@steakgrill.cz"><span class="addr">lisec@steakgrill.cz</span></a></dd>
-      <dd>Above 30 persons: Jaroslav Honzajk at <a href="tel:+420777727362">+420 777 727 362</a> or <a class="emailbreaker" href="mailto:honzajk@steakgrill.cz"><span class="addr">honzajk@steakgrill.cz</span></a></dd>
-      <dd>Bookings are preserved for 30 minut. Thank you for understanding.</dd>
+      <dd><strong>Up to 14 persons</strong><br/>only by telephone at <a href="tel:+420777330050">+420 777 330 050</a></dd>
+      <dd><strong><a var="inputvar-term-booking1">15 to 30 persons</a></strong></dd>
+      <dd><strong><a var="inputvar-term-booking2">Above 30 persons</a></strong></dd>
+      <dd>Bookings are preserved for 30 minutes. Thank you for understanding.</dd>
     </dl>
 <!--
     <dl>
