--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <dd>Air conditioned spaces</dd>
       <dd>Dogs are welcome</dd>
     </dl>
-    <dl class="card card-emph">
+    <dl class="card card-emph booking">
       <dt>Bookings</dt>
       <dd><strong>Up to 14 persons</strong><br/>only by telephone at <a href="tel:+420777330050">+420 777 330 050</a></dd>
       <dd><strong><a var="inputvar-term-booking1">15 to 30 persons</a></strong></dd>
