--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </dl>
     <dl class="card card-emph booking">
       <dt>Bookings</dt>
-      <dd><strong>Up to 14 persons</strong><br/>only by telephone at <a href="tel:+420777330050">+420 777 330 050</a></dd>
+      <dd><strong>Up to 14 persons</strong><br/>Only by telephone at <a href="tel:+420777330050">+420 777 330 050</a></dd>
       <dd><strong><a var="inputvar-term-booking1">15 to 30 persons</a></strong></dd>
       <dd><strong><a var="inputvar-term-booking2">Above 30 persons</a></strong></dd>
       <dd>Bookings are preserved for 30 minutes. Thank you for understanding.</dd>
