--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <desc>We make international dishes according to traditional recipes as people all over the world enjoy them.</desc>
     <ul class="button-list">
       <li><a class="button button-img" href="/regular_menu"><span class="fas fa-3x fa-clipboard-list">i</span>Regular Menu</a></li>
-      <li><a class="button button-img" href="/driks_list"><span class="fas fa-3x fa-mug-hot">i</span>Drinks List</a></li>
+      <li><a class="button button-img" href="/beverages"><span class="fas fa-3x fa-mug-hot">i</span>Drinks List</a></li>
       <li><a class="button button-img" href="/wine_list"><span class="fas fa-3x fa-wine-glass-alt">i</span>Wine List</a></li>
     </ul>
 <!--
