--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </dl>
       <h id="regular_menu" src="stala_nabidka.html">Regular menu</h>
       <desc>Regular menu not available</desc>
-      <h id="drinks_list" src="napojovy_listek.html">Drinks list</h>
+      <h id="beverages" src="napojovy_listek.html">Beverages</h>
       <desc>Drinks list not available</desc>
       <h id="wine_list" src="vinny_listek.html">Wine list</h>
       <desc>Wine list not available</desc>
