--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -205,10 +205,10 @@
       <dd class="price">CZK 89</dd>
     </dl>
     <dl class="meal">
-      <dt>Chocolate Cake</dt>
-      <dd>Traditional Prague chocolate cake with chocolate shavings and fresh whipped cream.</dd>
+      <dt>Carrot Cake</dt>
+      <dd>Homemade favorite American dessert made of carrot, peanuts, coconut and pineapple, fresh cheese and fresh whipped cream.</dd>
       <dt class="price">Price</dt>
-      <dd class="price">CZK 69</dd>
+      <dd class="price">CZK 79</dd>
     </dl>
     <dl class="meal">
       <dt>Fried Vanilla Ice Cream</dt>
