--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -248,14 +248,14 @@
       <dd class="price">CZK 59</dd>
     </dl>
     <dl class="meal">
-      <dt>Pasta Pomodoro</dt>
-      <dd>Pasta with tomatoes, garlic, basil and cream.</dd>
+      <dt>Penne Pomodoro</dt>
+      <dd>Italian pasta penne rigate with tomatoes, garlic, basil and cream.</dd>
       <dd class="price">CZK 55</dd>
     </dl>
     <dl class="meal">
-      <dt>Fried Ice Cream Scoop</dt>
-      <dd>Vanilla ice cream wrapped in a crust of wafers, coconut, walnuts and corn flakes, strawberry sauce, homemade whipped cream</dd>
-      <dd class="price">CZK 59</dd>
+      <dt>Chicken White Meat in Tomato Sauce</dt>
+      <dd>Jasmine rice, chicken white meat cooked <a var="inputvar-term-sous-vide">Sous-vide</a>, cut and warmed up in tomato sauce.</dd>
+      <dd class="price">CZK 69</dd>
     </dl>
 
     <h class="afterimg break" id="side_dishes">Side Dishes</h>
