--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
       <desc>Wine list not available</desc>
     </section>
     <h id="contact">Contact</h>
-    <desc data-visibility="/">The restaurant is situated right next to the D8 highway intersection to the city of Roudnice nad Labem and Velvary (Exit 29).</desc>
+    <desc data-visibility="/">Restaurant is situated at Racineves 189, 413 01 Roudnice nad Labem, right next to D8 highway (Exit 29).</desc>
     <p class="logo" data-visibility="/contact">
       <img src="/files/preview/design/logo-white-bg.png" alt="Steakgrill logo" />
     </p>
-    <p class="desc" data-visibility="/contact">The restaurant is situated right next to the D8 highway intersection to the city of Roudnice nad Labem and Velvary (Exit 29).</p>
+    <p class="desc" data-visibility="/contact">Restaurant is situated at Racineves 189, 413 01 Roudnice nad Labem, right next to D8 highway (Exit 29).</p>
     <ul class="button-list" data-visibility="/">
       <li><a class="button" href="#news">Subscribe to our newsletter</a></li>
       <li><a class="button" href="#contact_form">Contact form</a></li>
