--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <desc>You can browse the list below before posting a question. It contains answers to the most frequently asked questions.</desc>
       <dl class="faq">
         <dt>Do you offer gift vouchers?</dt>
-        <dd>Yes, we offer gift vouchers worth 500 CZK. Vouchers are valid for one year since the date of purchase. Vouchers are available at the bar or we’re happy to mail them to you.</dd>
+        <dd>Yes, we offer gift vouchers worth 500 CZK and 1.000 CZK. Vouchers are valid for one year since the date of purchase.</dd>
         <dt>Do you accept food stamps?</dt>
         <dd>Since 2019 it is no longer possible to pay with food stamps in our restaurant.</dd>
         <dt>Can I pay by card?</dt>
