--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </ul>
     <p>Member and certified commissioner of <a href="https://www.akc.cz/" title="Association of Cooks and Confectioners of Czech Republic">AKC (Czech)</a>, member of <a href="https://www.ahrcr.cz/" title="Association of Hotels and Restaurants of the Czech Republic">AHR CR (Czech)</a> and its gastronomy section. <a href="https://www.cenyahr.cz/drzitele-vyrocnich-cen-2007" title="Winner of 2007 annual awards">Restaurateur of the Year 2007 (Czech)</a> and <a href="https://www.cenyahr.cz/predstaveni-kandidatu" title="Nominee for 2018 annual awards">nominated in 2018 (Czech)</a>. Winner of the <a href="/files/cert.jpg">Bronze Medal of M.D. Rettigová (Czech)</a>.</p>
     <ul class="button-list">
-      <li><a class="button button-img" href="#daily_offer"><span class="fas fa-3x fa-utensils">i</span>Daily offer</a></li>
-      <li><a class="button button-img" href="#weekend_events"><span class="fas fa-3x fa-calendar-check">i</span>Weekend events</a></li>
+<!--       <li><a class="button button-img" href="#daily_offer"><span class="fas fa-3x fa-utensils">i</span>Daily offer</a></li> -->
+<!--       <li><a class="button button-img" href="#weekend_events"><span class="fas fa-3x fa-calendar-check">i</span>Weekend events</a></li> -->
       <li><a class="button button-img" href="#regular_menu"><span class="fas fa-3x fa-clipboard-list">i</span>Regular menu</a></li>
       <li><a class="button button-img" href="https://www.google.cz/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1"><span class="fas fa-3x fa-map-marked-alt">i</span>Where to find us</a></li>
       <li><a class="button button-img" href="https://www.facebook.com/Steakgrill/"><span class="fab fa-3x fa-facebook">i</span>Facebook (Czech)</a></li>
