--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -112,6 +112,8 @@
       <dd class="price">CZK 37</dd>
       <dt>Espresso lungo</dt>
       <dd class="price">CZK 39</dd>
+      <dt>Dopio (2× Espresso)</dt>
+      <dd class="price">CZK 75</dd>
       <dt>Cappuccino</dt>
       <dd class="price">CZK 43</dd>
       <dt>Latte macchiato</dt>
