--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -128,6 +128,8 @@
       <dd class="price">CZK 30</dd>
       <dt>Iced coffee with ice cream</dt>
       <dd class="price">CZK 70</dd>
+      <dt>Frappe</dt>
+      <dd class="price">CZK 45</dd>
       <dt>Montecelio loose teas</dt>
       <dd class="price">CZK 47</dd>
       <dd>(fruit, black – Earl Grey, rooibos, green)</dd>
