--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <p class="logo"><img src="/files/preview/design/logo-white-bg.png" alt="Steakgrill logo" /></p>
   <section>
     <h id="jaroslav_honzajk">Jaroslav Honzajk</h>
-    <desc>Owner and Chef and a recognized Grilling and Broiling Expert</desc>
+    <desc>Owner and chef and a recognized grilling and broiling expert</desc>
     <ul class="photoswipe">
       <li><a href="/files/full/design/honzajk.jpg"><img src="/files/design/honzajk.jpg" alt="Jaroslav Honzajk"/></a></li>
     </ul>
@@ -28,7 +28,7 @@
       <li><a class="button" href="#video-archives">Video archives</a></li>
     </ul>
     <section class="contentbalancer-none">
-      <h id="concept">Restaurant concept</h>
+      <h id="concept">Restaurant Concept</h>
       <desc>STEAKGRILL® is a Czech concept developed by M. D. Klíma based on his twenty years of experience and work in American steakhouses. It differs from other restaurants in that it offers a wide range of popular international dishes in addition to steaks.</desc>
       <ul class="photoswipe">
         <li><a href="/files/full/design/klima_honzajk.jpg"><img src="/files/design/klima_honzajk.jpg" alt="M. D. Klíma and Jaroslav Honzajk"/></a></li>
@@ -41,7 +41,7 @@
         <dd>Born June 23rd 1928, died October 15th 2011</dd>
         <dd><a href="https://www.hostovka.cz/?clanky=zivotopis">Mike’s life story (Czech)</a>, an article in <a href="https://www.hostovka.cz">Mike’s imaginary university for guests (Czech)</a></dd>
       </dl>
-      <h id="steaks">Our steaks</h>
+      <h id="steaks">Our Steaks</h>
       <desc>We make beef steaks from aged meat with a high degree of marbling. We roast our steaks accurately as you request—from rare to well done. If you are not sure our staff is always ready to advise you.</desc>
       <dl>
         <dt><img src="/files/thumbs/rare.png" alt="steak rare"/></dt>
@@ -77,7 +77,7 @@
         <dd>USDA Select</dd>
       </dl>
       <p>We import mostly from farms in South America, usually from Uruguay, with high and medium degrees of marbling. We use meat from grain-fed animals or <em>USDA Prime</em> and <em>USDA Choice</em> quality class meats.</p>
-      <h id="video-archives">Video archives</h>
+      <h id="video-archives">Video Archives</h>
       <desc>Our restaurant has been featured in the TV shows <em>Živě na Jedničce</em> and <em>Kluci v akci.</em> In these TV shows we showed, among other things, how to prepare our hamburger and our pork ribs.</desc>
       <ul>
         <li><a href="//youtu.be/yp3vGZunX-E"><span class="fab fa-2x fa-youtube">i</span>Promotional video on Steakgrill restaurant.</a></li>
@@ -101,13 +101,13 @@
 -->
     <section>
 <!--
-      <h id="daily_offer" var="inputvar-nabidka" title="Daily offer" class="break nobalance">Daily offer</h>
+      <h id="daily_offer" var="inputvar-nabidka" title="Daily offer" class="break nobalance">Daily Offer</h>
       <desc var="inputvar-nabidka-popis">n/a</desc>
       <dl var="inputvar-nabidka-polevka1" class="meal" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-nabidka-polevka2" class="meal" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-nabidka-jidlo1" class="meal" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-nabidka-jidlo2" class="meal" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
-      <h id="weekend_events" var="inputvar-vikendova-akce" title="Weekend events…" class="break nobalance">Weekend events</h>
+      <h id="weekend_events" var="inputvar-vikendova-akce" title="Weekend events…" class="break nobalance">Weekend Events</h>
       <desc var="inputvar-akce-popis">n/a</desc>
       <dl var="inputvar-akce-predkrm1" class="meal" data-type="Starter"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-akce-predkrm2" class="meal" data-type="Starter"><dt>n/a</dt><dd>n/a</dd></dl>
@@ -126,11 +126,11 @@
         <dd>— <a href="#concept">M. D. Klíma, Founder of the STEAKGRILL® Concept</a></dd>
         <dd><span class="fas fa-3x fa-quote-right">i</span></dd>
       </dl>
-      <h id="regular_menu" src="stala_nabidka.html">Regular menu</h>
+      <h id="regular_menu" src="stala_nabidka.html">Regular Menu</h>
       <desc>Regular menu not available</desc>
       <h id="beverages" src="napojovy_listek.html">Beverages</h>
       <desc>Drinks list not available</desc>
-      <h id="wine_list" src="vinny_listek.html">Wine list</h>
+      <h id="wine_list" src="vinny_listek.html">Wine List</h>
       <desc>Wine list not available</desc>
     </section>
     <h id="contact">Contact</h>
@@ -178,10 +178,10 @@
       <desc>We inform our registered customers about barbecue parties and other events that we organize. To subscribe, just fill in your email address. You can cancel your subscription at any time.</desc>
       <p var="contactform-news">The newsletter subscription form is currently not available</p>
 -->
-      <h id="contact_form">Contact form</h>
+      <h id="contact_form">Contact Form</h>
       <desc>Send us your questions or feedback about how you enjoyed our place or how we could improve. If you give us your contact details, you can expect our reply. <span var="inputvar-rezervace">n/a</span></desc>
       <p var="contactform-basic"/>
-      <h id="questions">Frequently asked questions</h>
+      <h id="questions">Frequently Asked Questions</h>
       <desc>You can browse the list below before posting a question. It contains answers to the most frequently asked questions.</desc>
       <dl class="faq">
         <dt>Do you offer gift vouchers?</dt>
