--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
     </ul>
     
     <dl class="card card-emph">
-      <dt>Opening hours</dt>
+      <dt>Opening Hours</dt>
       <dd>Open daily from 11 am to 10 pm,</dd>
       <dd>Fridays and Saturdays until 11 pm.</dd>
-      <dt>Guest information</dt>
+      <dt>Guest Information</dt>
       <dd>Debit cards are accepted</dd>
       <dd>Children are welcome</dd>
       <dd>WiFi is available in whole area</dd>
