--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -3,7 +3,7 @@
   <h id="beverages" author="Internet Guru" ctime="2018-03-28">Beverages</h>
   <desc>Our homemade lemonades made from fresh fruit refresh on a hot day, and our homemade baked teas warm up in bitter weather. Beer lovers will enjoy our Pilsner and occasional offers of micro-brewed beers, in addition to a wide range of quality rums.</desc>
   <section class="contenttoc">
-    <h id="alcoholic" title="Alcoholic beverages, beer…">Alcoholic beverages, beer</h>
+    <h id="alcoholic" title="Alcoholic beverages, beer…">Alcoholic Beverages, Beer</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
       <dt>Carling British Cider, Cherry <span>0.3 L</span></dt>
@@ -29,7 +29,7 @@
     </dl>
     <dl><dt/><dd/></dl>
 
-    <h id="mixed" class="break" title="Mixed drinks, Apéritifs and Sparkling Wines…">Mixed drinks, Apéritifs and Sparkling Wines</h>
+    <h id="mixed" class="break" title="Mixed drinks, Apéritifs and Sparkling Wines…">Mixed Drinks, Apéritifs and Sparkling Wines</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
       <dt>Crodino Spritz</dt>
@@ -66,7 +66,7 @@
     </dl>
     <dl><dt/><dd/></dl>
 
-    <h id="soft_drinks" class="break" title="Soft drinks…">Soft drinks</h>
+    <h id="soft_drinks" class="break" title="Soft drinks…">Soft Drinks</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
       <dt>Homemade lemonade</dt>
@@ -105,7 +105,7 @@
       <dd class="price">CZK 45</dd>
     </dl>
 
-    <h id="hot_drinks" class="break" title="Hot drinks, coffee, tea…">Hot drinks, coffee, tea</h>
+    <h id="hot_drinks" class="break" title="Hot drinks, coffee, tea…">Hot Drinks, Coffee, Tea</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
       <dt>Espresso</dt>
@@ -146,7 +146,7 @@
       <dd class="price">CZK 42</dd>
     </dl>
 
-    <h id="rums" class="break" title="Rums and spirits…">Rums and spirits</h>
+    <h id="rums" class="break" title="Rums and spirits…">Rums and Spirits</h>
     <desc>Rums and spirits come in servings of 0.4 cL. For more information on our rums, please ask the waiter for a Rum List.</desc>
     <dl class="meal meal-oneline">
       <dt>Diplomático Mantuano</dt>
