--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -3,7 +3,7 @@
   <h id="wine_list" author="Internet Guru" ctime="2018-03-28">Wine List</h>
   <desc>The wine list is tailored for our restaurant by a leading Czech specialist. Acceptable pricing is a main criterion in addition to the dishes on offer. We offer French, Italian and Czech wines.</desc>
   <section class="contenttoc">
-    <h id="sparkling_wines_and_prosecco" title="">Sparking Wines and Prosecco</h>
+    <h id="sparkling_wines_and_prosecco" title="Sparking Wines and Prosecco…">Sparking Wines and Prosecco</h>
     <desc>n/a</desc>
     <dl class="meal">
       <dt>Louis Perdrier Demi-Sec</dt>
@@ -29,7 +29,7 @@
       <dd class="price multiple"><span><span>0.1 L</span><span>CZK 60</span></span> <span><span>0.75 L</span><span>CZK 350</span></span></dd>
     </dl>
 
-    <h id="house_wine" class="break" title="House Wine">House Wine</h>
+    <h id="house_wine" class="break" title="House Wine…">House Wine</h>
     <desc>n/a</desc>
     <dl class="meal">
       <dt>Zafrica – medium-dry white</dt>
@@ -62,7 +62,7 @@
       <dd class="price"><span><span>0.2 L</span><span>CZK 58</span></span></dd>
     </dl>
 
-    <h id="white_wines" class="break" title="White Wines">White Wines</h>
+    <h id="white_wines" class="break" title="White Wines…">White Wines</h>
     <desc>n/a</desc>
 
     <dl class="meal">
@@ -100,7 +100,7 @@
       <dd class="price"><span><span>0.75 L</span><span>CZK 420</span></span></dd>
     </dl>
 
-    <h id="red_wines" class="break" title="Red Wines">Red Wines</h>
+    <h id="red_wines" class="break" title="Red Wines…">Red Wines</h>
     <desc>n/a</desc>
 
     <dl class="meal">
