--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -146,7 +146,7 @@
       <dd class="price">CZK 42</dd>
     </dl>
 
-    <h id="rums" class="break" title="Rums and Brandy…">Rums and Brandy</h>
+    <h id="rums" class="break">Rums and Brandy</h>
     <desc>Rums and brandy come in servings of 0.4 cL. For more information on our rums, please ask the waiter for a Rum List.</desc>
     <dl class="meal meal-oneline">
       <dt>Diplomático Mantuano</dt>
