--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -1,215 +1,215 @@
 <?xml version="1.0" encoding="utf-8"?>
-<body xml:lang="en" ns="https://en.steakgrill.cz">
-  <h id="beverages" author="Internet Guru" ctime="2018-03-28">Beverages</h>
-  <desc>Our homemade lemonades made from fresh fruit refresh on a hot day, and our homemade baked teas warm up in bitter weather. Beer lovers will enjoy our Pilsner and occasional offers of micro-brewed beers, in addition to a wide range of quality rums.</desc>
+<body xml:lang="cs" ns="https://www.steakgrill.cz">
+  <h id="napojovy_listek" author="InternetGuru" ctime="2018-03-28">Nápojový lístek</h>
+  <desc>Naše domácí limonády z čerstvého ovoce Vás osvěží za horkého dne a náš připravovaný pečený čaj zahřeje v sychravém počasí. Pivařům čepujeme Plzeň s občasnou nabídkou piv z malých pivovarů a nezaostáváme v širší nabídce kvalitních rumů.</desc>
   <section class="contenttoc">
-    <h id="alcoholic" title="Alcoholic Beverages, Beer…">Alcoholic Beverages, Beer</h>
+    <h id="alkoholicke" title="Alkoholické nápoje, pivo…">Alkoholické nápoje, pivo</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
-      <dt>Carling British Cider, Cherry <span>0.3 L</span></dt>
-      <dd class="price">CZK 45</dd>
-      <dd>4% alc. (bottled)</dd>
-      <dt>Pilsner Urquell draft beer <span>0.3 L</span></dt>
-      <dd class="price">CZK 30</dd>
-      <dt>Pilsner Urquell draft beer <span>0.5 L</span></dt>
-      <dd class="price">CZK 45</dd>
-      <dt>Staropramen 11° draft beer <span>0.3 L</span></dt>
-      <dd class="price">CZK 25</dd>
-      <dt>Staropramen 11° draft beer <span>0.5 L</span></dt>
-      <dd class="price">CZK 35</dd>
-      <dt>Staropramen non-alcoholic draft beer <span>0.3 L</span></dt>
-      <dd class="price">CZK 25</dd>
-      <dt>Staropramen non-alcoholic draft beer <span>0.5 L</span></dt>
-      <dd class="price">CZK 35</dd>
-      <dt>Stella Artois non-alcoholic beer (bottled) <span>0.33 L</span></dt>
-      <dd class="price">CZK 33</dd>
-      <dt>Guinness (canned) <span>0.44 L</span></dt>
-      <dd class="price">CZK 48</dd>
-      <dd>Irish stout</dd>
+      <dt>Carling British Cider Cherry <span>0,3 l</span></dt>
+      <dd class="price">45 Kč</dd>
+      <dd>4 % alk. (sklo)</dd>
+      <dt>Pilsner Urquell točené <span>0,3 l</span></dt>
+      <dd class="price">30 Kč</dd>
+      <dt>Pilsner Urquell točené <span>0,5 l</span></dt>
+      <dd class="price">45 Kč</dd>
+      <dt>Staropramen 11° točené <span>0,3 l</span></dt>
+      <dd class="price">25 Kč</dd>
+      <dt>Staropramen 11° točené <span>0,5 l</span></dt>
+      <dd class="price">35 Kč</dd>
+      <dt>Staropramen nealko točené <span>0,3 l</span></dt>
+      <dd class="price">25 Kč</dd>
+      <dt>Staropramen nealko točené <span>0,5 l</span></dt>
+      <dd class="price">35 Kč</dd>
+      <dt>Stella Artois nealko (sklo) <span>0,33 l</span></dt>
+      <dd class="price">33 Kč</dd>
+      <dt>Guinness (plech) <span>0,44 l</span></dt>
+      <dd class="price">48 Kč</dd>
+      <dd>Irské černé pivo</dd>
     </dl>
-    <dl><dt/><dd/></dl>
 
-    <h id="mixed" class="break" title="Mixed Drinks, Apéritifs and Sparkling Wines…">Mixed Drinks, Apéritifs and Sparkling Wines</h>
+    <h id="michane" class="break" title="Míchané nápoje, aperitivy a sekty…">Míchané nápoje, aperitivy a sekty</h>
     <desc>n/a</desc>
+<!--     <desc>U obsluhy je možné si vyžádat lístek míchaních nápojů, na kterém jsou jednotlivé
+nápoje detailněji popsány včetně složení.</desc> -->
     <dl class="meal meal-oneline">
       <dt>Crodino Spritz</dt>
-      <dd class="price">CZK 60</dd>
-      <dd>Crodino, soda, slice of orange, ice</dd>
+      <dd class="price">60 Kč</dd>
+      <dd>Crodino, soda, plátek pomeranče, led</dd>
       <dt>Aperol Spritz</dt>
-      <dd class="price">CZK 90</dd>
-      <dd>Aperol, Prosecco DOC, soda, slice of orange, ice</dd>
+      <dd class="price">90 Kč</dd>
+      <dd>Aperol, prosecco DOC, soda, plátek pomeranče, led</dd>
       <dt>Tanqueray &amp; East Imperial Tonic</dt>
-      <dd class="price">CZK 90</dd>
-      <dd>London gin, East Imperial tonic, slice of lime, ice</dd>
+      <dd class="price">90 Kč</dd>
+      <dd>Londýnský gin, tonic East Imperial, plátek limetky, led</dd>
       <dt>Moscow Mule</dt>
-      <dd class="price">CZK 90</dd>
-      <dd>Russian Standard vodka, East Imperial ginger ale, lime, ice</dd>
+      <dd class="price">90 Kč</dd>
+      <dd>Vodka Russian Standard, zázvorové pivo East Imperial, limetka, led</dd>
       <dt>Cuba Libre</dt>
-      <dd class="price">CZK 90</dd>
-      <dd>Havana 3 YO light rum, Coca Cola, lime, ice</dd>
+      <dd class="price">90 Kč</dd>
+      <dd>Světlý rum Havana 3 YO, Coca Cola, limetka, led</dd>
       <dt>Mojito</dt>
-      <dd class="price">CZK 90</dd>
-      <dd>Havana 3 YO light rum, soda, cane sugar, lime, mint, ice</dd>
-      <dt>Cinzano Bianco <span>0.1 L</span></dt>
-      <dd class="price">CZK 45</dd>
-      <dt>Campari <span>0.05 L</span></dt>
-      <dd class="price">CZK 50</dd>
-      <dt>Gancia Prosecco <a var="inputvar-term-doc">DOC</a>, Brut <span>0.1 L</span></dt>
-      <dd class="price">CZK 60</dd>
-      <dt>Gancia Prosecco <a var="inputvar-term-doc">DOC</a>, Brut <span>0.75 L</span></dt>
-      <dd class="price">CZK 350</dd>
-      <dt>Bepin de Eto Millesimato <a var="inputvar-term-docg">DOCG</a> <span>0.75 L</span></dt>
-      <dd class="price">CZK 600</dd>
-      <dt>Louis Perdrier <span>0.75 L</span></dt>
-      <dd class="price">CZK 240</dd>
-      <dd>Demi Sec or Brut (imported from France)</dd>
+      <dd class="price">90 Kč</dd>
+      <dd>Světlý rum Havana 3 YO, soda, třtinový cukr, limetka, máta, led</dd>
+      <dt>Cinzano Bianco <span>0,1 l</span></dt>
+      <dd class="price">45 Kč</dd>
+      <dt>Campari <span>0,05 l</span></dt>
+      <dd class="price">50 Kč</dd>
+      <dt>Gancia Prosecco <a var="inputvar-term-doc">DOC</a>, Brut <span>0,1 l</span></dt>
+      <dd class="price">60 Kč</dd>
+      <dt>Gancia Prosecco <a var="inputvar-term-doc">DOC</a>, Brut <span>0,75 l</span></dt>
+      <dd class="price">350 Kč</dd>
+      <dt>Bepin de Eto Millesimato <a var="inputvar-term-docg">DOCG</a> <span>0,75 l</span></dt>
+      <dd class="price">600 Kč</dd>
+      <dt>Louis Perdrier <span>0,75 l</span></dt>
+      <dd class="price">240 Kč</dd>
+      <dd>Demi Sec nebo Brut (oblast Francie)</dd>
     </dl>
-    <dl><dt/><dd/></dl>
 
-    <h id="soft_drinks" class="break" title="Soft Drinks…">Soft Drinks</h>
+    <h id="nealkoholicke" class="break" title="Nealkoholické nápoje…">Nealkoholické nápoje</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
-      <dt>Homemade lemonade</dt>
-      <dd class="price">CZK 58</dd>
-      <dt>Homemade raspberry lemonade</dt>
-      <dd class="price">CZK 63</dd>
-      <dt>Coca-Cola <span>0.33 L</span></dt>
-      <dd class="price">CZK 38</dd>
+      <dt>Domácí citronáda</dt>
+      <dd class="price">58 Kč</dd>
+      <dt>Domácí malinová limonáda</dt>
+      <dd class="price">63 Kč</dd>
+      <dt>Coca-Cola <span>0,33 l</span></dt>
+      <dd class="price">38 Kč</dd>
       <dd>(original, light, zero)</dd>
-      <dt>Fanta orange <span>0.33 L</span></dt>
-      <dd class="price">CZK 38</dd>
-      <dt>Sprite <span>0.33 L</span></dt>
-      <dd class="price">CZK 38</dd>
-      <dt>Kinley tonic <span>0.25 L</span></dt>
-      <dd class="price">CZK 38</dd>
-      <dt>Kinley ginger ale <span>0.25 L</span></dt>
-      <dd class="price">CZK 38</dd>
-      <dt>Cappy <span>0.2 L</span></dt>
-      <dd class="price">CZK 36</dd>
-      <dd>(orange, strawberry, multivitamin, blackcurrant, pear, apple)</dd>
-      <dt>Bonaqua <span>0.25 L</span></dt>
-      <dd class="price">CZK 26</dd>
-      <dd>(sparkling, mild, still)</dd>
-      <dt>Red Bull <span>0.25 L</span></dt>
-      <dd class="price">CZK 60</dd>
-      <dt>Römerquelle <span>0.33 L</span></dt>
-      <dd class="price">CZK 32</dd>
-      <dd>(sparkling, still)</dd>
-      <dt>Römerquelle <span>0.75 L</span></dt>
-      <dd class="price">CZK 70</dd>
-      <dd>(sparkling, still)</dd>
-      <dt>Fuzetea <span>0.25 L</span></dt>
-      <dd class="price">CZK 38</dd>
-      <dd>(green with mango and chamomile, black with peach and hibiscus)</dd>
-      <dt>Carafe of water with lemon <span>1 L</span></dt>
-      <dd class="price">CZK 45</dd>
+      <dt>Fanta pomeranč <span>0,33 l</span></dt>
+      <dd class="price">38 Kč</dd>
+      <dt>Sprite <span>0,33 l</span></dt>
+      <dd class="price">38 Kč</dd>
+      <dt>Kinley tonic <span>0,25 l</span></dt>
+      <dd class="price">38 Kč</dd>
+      <dt>Kinley zázvor <span>0,25 l</span></dt>
+      <dd class="price">38 Kč</dd>
+      <dt>Cappy <span>0,2 l</span></dt>
+      <dd class="price">36 Kč</dd>
+      <dd>(pomeranč, jahoda, multivitamín, černý rybíz, hruška, jablko)</dd>
+      <dt>Bonaqua <span>0,25 l</span></dt>
+      <dd class="price">26 Kč</dd>
+      <dd>(perlivá, jemně perlivá, neperlivá)</dd>
+      <dt>Red bull <span>0,25 l</span></dt>
+      <dd class="price">60 Kč</dd>
+      <dt>Romerquelle <span>0,33 l</span></dt>
+      <dd class="price">32 Kč</dd>
+      <dd>(perlivá, neperlivá)</dd>
+      <dt>Romerquelle <span>0,75 l</span></dt>
+      <dd class="price">70 Kč</dd>
+      <dd>(perlivá, neperlivá)</dd>
+      <dt>Fuzetea <span>0,25 l</span></dt>
+      <dd class="price">38 Kč</dd>
+      <dd>(zelený s mangem a heřmánkem, černý s broskví a ibiškem)</dd>
+      <dt>Karafa s vodou a citronem <span>1 l</span></dt>
+      <dd class="price">45 Kč</dd>
     </dl>
 
-    <h id="hot_drinks" class="break" title="Hot Drinks, Coffee, Tea…">Hot Drinks, Coffee, Tea</h>
+    <h id="horke" class="break" title="Horké nápoje, káva a čaj…">Horké nápoje, káva a čaj</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
       <dt>Espresso</dt>
-      <dd class="price">CZK 37</dd>
+      <dd class="price">37 Kč</dd>
       <dt>Espresso lungo</dt>
-      <dd class="price">CZK 39</dd>
+      <dd class="price">39 Kč</dd>
       <dt>Dopio (2× Espresso)</dt>
-      <dd class="price">CZK 75</dd>
-      <dt>Cappuccino</dt>
-      <dd class="price">CZK 43</dd>
-      <dt>Latte macchiato</dt>
-      <dd class="price">CZK 45</dd>
-      <dt>Café Vienna</dt>
-      <dd class="price">CZK 43</dd>
-      <dt>Wiener Melange</dt>
-      <dd class="price">CZK 43</dd>
-      <dt>Eggnog latté</dt>
-      <dd class="price">CZK 70</dd>
-      <dt>Turkish coffee</dt>
-      <dd class="price">CZK 30</dd>
-      <dt>Iced coffee with ice cream</dt>
-      <dd class="price">CZK 70</dd>
-      <dt>Frappe</dt>
-      <dd class="price">CZK 45</dd>
-      <dt>Montecelio loose teas</dt>
-      <dd class="price">CZK 47</dd>
-      <dd>(fruit, black – Earl Grey, rooibos, green)</dd>
-      <dt>Ginger tea</dt>
-      <dd class="price">CZK 52</dd>
-      <dd>(fresh ginger)</dd>
-      <dt>Peppermint tea</dt>
-      <dd class="price">CZK 52</dd>
-      <dd>(fresh peppermint)</dd>
-      <dt>Our homemade baked tea</dt>
-      <dd class="price">CZK 49</dd>
-      <dd>Pear + apple + plum + grapefruit</dd>
+      <dd class="price">75 Kč</dd>
+      <dt>Cappucino</dt>
+      <dd class="price">43 Kč</dd>
+      <dt>Latte macchiatto</dt>
+      <dd class="price">45 Kč</dd>
+      <dt>Vídeňská káva</dt>
+      <dd class="price">43 Kč</dd>
+      <dt>Vídeňská melange</dt>
+      <dd class="price">43 Kč</dd>
+      <dt>Alžírská káva</dt>
+      <dd class="price">70 Kč</dd>
+      <dt>Turecká káva</dt>
+      <dd class="price">30 Kč</dd>
+      <dt>Ledová káva se zmrzlinou</dt>
+      <dd class="price">70 Kč</dd>
+      <dt>Frappé</dt>
+      <dd class="price">45 Kč</dd>
+      <dt>Sypané čaje montecelio </dt>
+      <dd class="price">47 Kč</dd>
+      <dd>(ovocný, černý – earl grey, roibos, zelený)</dd>
+      <dt>Zázvorový čaj</dt>
+      <dd class="price">52 Kč</dd>
+      <dd>(čerstvý zázvor)</dd>
+      <dt>Mátový čaj</dt>
+      <dd class="price">52 Kč</dd>
+      <dd>(čerstvá máta)</dd>
+      <dt>Náš pečený ovocný čaj</dt>
+      <dd class="price">49 Kč</dd>
+      <dd>Směs hruška + jablko + švestka + grep</dd>
       <dt>Grog</dt>
-      <dd class="price">CZK 42</dd>
+      <dd class="price">42 Kč</dd>
     </dl>
 
-    <h id="rums" class="break">Rums and Brandy</h>
-    <desc>Rums and brandy come in servings of 0.4 cL. For more information on our rums, please ask the waiter for a Rum List.</desc>
+    <h id="rumy" class="break">Rumy a pálenky</h>
+    <desc>Rumy a pálenky se podávají v objemu 0,4 cl. Pro více informací o jednotlivých rumech požádejte obsluhu o rumový lístek.</desc>
     <dl class="meal meal-oneline">
       <dt>Diplomático Mantuano</dt>
-      <dd class="price">CZK 80</dd>
+      <dd class="price">80 Kč</dd>
       <dt>Diplomático Reserva Exclusiva</dt>
-      <dd class="price">CZK 120</dd>
+      <dd class="price">120 Kč</dd>
       <dt>Zacapa Centenario 23</dt>
-      <dd class="price">CZK 130</dd>
-      <dt>Millonario XO</dt>
-      <dd class="price">CZK 240</dd>
-      <dt>Millonario 10 Aniversario Reserva</dt>
-      <dd class="price">CZK 120</dd>
+      <dd class="price">130 Kč</dd>
+      <dt>Millonario Xo</dt>
+      <dd class="price">240 Kč</dd>
+      <dt>Millonario 10 Aniversario Reserva</dt>
+      <dd class="price">120 Kč</dd>
       <dt>Auténtico Nativo 15 YO</dt>
-      <dd class="price">CZK 100</dd>
+      <dd class="price">100 Kč</dd>
       <dt>Pyrat XO Reserve</dt>
-      <dd class="price">CZK 90</dd>
-      <dt>Angostura 5 YO</dt>
-      <dd class="price">CZK 60</dd>
-      <dt>Angostura 7 YO</dt>
-      <dd class="price">CZK 80</dd>
+      <dd class="price">90 Kč</dd>
+      <dt>Angostura 5 YO</dt>
+      <dd class="price">60 Kč</dd>
+      <dt>Angostura 7 YO</dt>
+      <dd class="price">80 Kč</dd>
       <dt>Kraken Black Spiced</dt>
-      <dd class="price">CZK 50</dd>
+      <dd class="price">50 Kč</dd>
       <dt>Don Papa</dt>
-      <dd class="price">CZK 100</dd>
-      <dt>Legendario Elixir 7 YO</dt>
-      <dd class="price">CZK 60</dd>
+      <dd class="price">100 Kč</dd>
+      <dt>Legendario Elixir 7 YO</dt>
+      <dd class="price">60 Kč</dd>
       <dt>Six Saints</dt>
-      <dd class="price">CZK 100</dd>
-      <dt>Fassbind Old Plum</dt>
-      <dd class="price">CZK 130</dd>
-      <dt>Fassbind Old Raspberry</dt>
-      <dd class="price">CZK 130</dd>
-      <dt>Fassbind Old Pear</dt>
-      <dd class="price">CZK 130</dd>
+      <dd class="price">100 Kč</dd>
+      <dt>Fassbind stařená švestka</dt>
+      <dd class="price">130 Kč</dd>
+      <dt>Fassbind stařená malina</dt>
+      <dd class="price">130 Kč</dd>
+      <dt>Fassbind stařená hruška</dt>
+      <dd class="price">130 Kč</dd>
     </dl>
 
-    <h id="spirits" class="break" title="Spirits">Spirits</h>
-    <desc>We offer generally known spirits; each comes in servings of 0.4 cL.</desc>
+    <h id="destilaty" class="break" title="Destiláty">Destiláty</h>
+    <desc>Nabízíme obecně známé destiláty, které podáváme v objemu 0,4 cl.</desc>
     <dl class="meal meal-oneline">
       <dt>Captain Morgan</dt>
-      <dd class="price">CZK 50</dd>
+      <dd class="price">50 Kč</dd>
       <dt>Božkov Tuzemský</dt>
-      <dd class="price">CZK 30</dd>
+      <dd class="price">30 Kč</dd>
       <dt>Vodka Finlandia</dt>
-      <dd class="price">CZK 40</dd>
+      <dd class="price">40 Kč</dd>
       <dt>Slivovice</dt>
-      <dd class="price">CZK 50</dd>
+      <dd class="price">50 Kč</dd>
       <dt>Tanquearay</dt>
-      <dd class="price">CZK 60</dd>
+      <dd class="price">60 Kč</dd>
       <dt>Fernet / Fernet Citrus</dt>
-      <dd class="price">CZK 35</dd>
+      <dd class="price">35 Kč</dd>
       <dt>Becherovka</dt>
-      <dd class="price">CZK 35</dd>
+      <dd class="price">35 Kč</dd>
       <dt>Jägermeister</dt>
-      <dd class="price">CZK 50</dd>
-      <dt>Brandy eggnog</dt>
-      <dd class="price">CZK 30</dd>
+      <dd class="price">50 Kč</dd>
+      <dt>Vaječný likér</dt>
+      <dd class="price">30 Kč</dd>
       <dt>Tullamore Dew</dt>
-      <dd class="price">CZK 60</dd>
-      <dt>Jack Daniel's Honey</dt>
-      <dd class="price">CZK 60</dd>
+      <dd class="price">60 Kč</dd>
+      <dt>Jack Daniel's Honey</dt>
+      <dd class="price">60 Kč</dd>
       <dt>Metaxa *******</dt>
-      <dd class="price">CZK 60</dd>
+      <dd class="price">60 Kč</dd>
     </dl>
   </section>
 </body>
