--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -5,6 +5,9 @@
   <section class="contenttoc">
     <h id="polevky">Polévky</h>
     <desc class="noprint">Po celý den připravujeme čtyři druhy polévek. Polévky jsou dle vlastní Mikeovy receptury. Takové jinde neochutnáte!</desc>
+    <ul class="photoswipe">
+      <li><a href="/files/full/design/soups.jpg"><img src="/files/design/soups.jpg" alt="Soups"/></a></li>
+    </ul>
     <dl class="meal">
       <dt>Texaské chilli</dt>
       <dd>Americká specialita. Hustá pálivá polévka plná mletého hovězího a vepřového masa, drcených rajčat, Jalapeño papriček a fazolí.</dd>
@@ -74,6 +77,9 @@
 
     <h class="break" id="salatove_talire">Salátové talíře</h>
     <desc>Nabízíme výběr ze světových salátů, které se nejlépe osvědčily pro naší klientelu. K salátům doporučujeme naši populární grilovanou bagetu s česnekovým máslem.</desc>
+    <ul class="photoswipe">
+      <li><a href="/files/full/design/salads.jpg"><img src="/files/design/salads.jpg" alt="Salads"/></a></li>
+    </ul>
     <dl class="meal">
       <dt>Cobb salát</dt>
       <dd>Jeden z nejpopulárnějších salátů. Ledový salát, rajčata, avokádo, kuřecí maso, vajíčko, modrý plísňový sýr, grilovaná slanina, římský salát, pikantní Derby dresing, česneková bageta.</dd>
@@ -167,6 +173,9 @@
 
     <h class="break" id="grilovane_steaky">Grilované steaky</h>
     <desc>Provádíme opravdové grilování prémiového masa na přímém ohni – vždy odleželého na pokojovou teplotu. Úpravu hovězích steaků doporučujeme medium-rare, maximálně medium. Ke steakům si můžete objednat některou z našich omáček.</desc>
+    <ul class="photoswipe">
+      <li><a href="/files/full/design/steaks.jpg"><img src="/files/design/steaks.jpg" alt="Steaks"/></a></li>
+    </ul>
     <dl class="meal">
       <dt>Grilled Fillet Mignon, 180 g</dt>
       <dd>Steak z hovězí svíčkové z mladého býčka (z českých chovů), obalený sušenou slaninou, šťouchané brambory s pórkem, slaninou a máslem, krémový špenát, grilovaný na vnitřní teplotu podle vašeho přání.</dd>
