--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -4,7 +4,7 @@
   <desc>Nabízíme populární jídla mezinárodní kuchyně. Mimo steaků a burgerů si přijdou na své i milovníci salátů a netradičních polévek, pro které je náš podnik také vyhlášený.</desc>
   <section class="contenttoc">
     <h id="polevky">Polévky</h>
-    <desc class="noprint">Po celý den připravujeme čtyři druhy polévek. Polévky jsou dle vlastní Mikeovy receptury. Takové jinde neochutnáte!</desc>
+    <desc>Po celý den připravujeme čtyři druhy polévek. Polévky jsou dle vlastní Mikeovy receptury. Takové jinde neochutnáte!</desc>
     <ul class="photoswipe">
       <li><a href="/files/full/design/soups.jpg"><img src="/files/design/soups.jpg" alt="Soups"/></a></li>
     </ul>
