--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <dd>USDA Select</dd>
       </dl>
       <p>Maso nakupujeme převážně z jihoamerických farem, většinou z Uruguaye, vždy se středním či vysokým stupněm mramorování. Jedná se o dokrmovanou zvěř (tzv. grainfed) nebo maso s třídou kvality <em>USDA Prime</em> a <em>USDA Choice</em>.</p>
-      <h id="video-archives">Video Archives</h>
+      <h id="videoarchiv">Videoarchiv</h>
       <desc>Naše restaurace se objevila v pořadech Živě na Jedničce a Kluci v akci. V rámci pořadů jsme mimo jiné ukázali, jak správně připravit hamburger nebo naše vepřová žebra.</desc>
       <ul>
         <li><a href="//youtu.be/yp3vGZunX-E"><span class="fab fa-2x fa-youtube">i</span>Promo video restaurace Steakgrill.</a></li>
