--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <desc>Naše registrované zákazníky informujeme o grilovačkách a dalších pořádaných akcích. Pro registraci stačí uvést e-mailovou adresu. Registraci je možné kdykoli zrušit.</desc>
       <p var="contactform-news">The newsletter subscription form is currently not available</p>
       <h id="contact_form">Contact Form</h>
-      <desc>Send us your questions or feedback about how you enjoyed our place or how we could improve. If you give us your contact details, you can expect our reply. <span var="inputvar-rezervace">n/a</span></desc>
+      <desc>Pošlete nám dotaz nebo zpětnou vazbu, jak se vám u nás líbilo nebo v čem bychom se mohli zlepšit. Pokud uvedete kontaktní údaje, můžete očekávat naší odpověď. <span var="inputvar-rezervace">n/a</span></desc>
       <p var="contactform-basic"/>
       <h id="dotazy">Často kladené dotazy</h>
       <desc>Před položením dotazu si můžete projít následující seznam. Obsahuje odpovědi na nejčastěji kladené otázky.</desc>
