--- a/plugins/InputVar/InputVar.html
+++ b/plugins/InputVar/InputVar.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<body xml:lang="en" ns="https://en.steakgrill.cz">
+<body xml:lang="en" ns="https://en.steakgrill.cz" class="inputvar">
   <h author="InternetGuru" ctime="2015-06" id="inputvar">Administration of special food offers</h>
   <desc kw="administrace, InputVar">When editing texts, respect <a href="https://cs.wikipedia.org/wiki/Wikipedie:Typografick%C3%A9_rady" title="Wikipedia: Typographic advice">general typographic rules</a>, and particularly the list of common shortcomings (below). Before saving, read the text again after at least a few minutes. After saving, go through the text once more; ideally, ask a colleague to review it as well. Leave the box blank to hide a dish.</desc>
 
