--- a/plugins/InputVar/InputVar.html
+++ b/plugins/InputVar/InputVar.html
@@ -38,7 +38,7 @@
         <dt var="nopasswd"><label for="inputvar-passwd">Password</label></dt>
         <dd var="nopasswd"><input name="passwd" required="required" type="password" id="inputvar-passwd"/></dd>
         <dt></dt>
-        <dd><input type="hidden" var="userfilehash@value" name="userfilehash"/><input type="submit" value="Save"/></dd>
+        <dd><input type="hidden" var="userfilehash@value" name="userfilehash"/><input type="submit" class="button" value="Save"/></dd>
       </dl>
     </fieldset>
   </form>
