--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </ul>
     </section>
     <h id="nabidka" short="Nabídka">Nabídka restaurace</h>
-    <desc>Připravujeme mezinárodní jídla podle tradičních receptur tak, jak lidem chutnají po celém světě. Hosté u nás dostanou přesně to, co je uvedeno na jídelním lístku.</desc>
+    <desc>Připravujeme mezinárodní jídla podle tradičních receptur tak, jak lidem chutnají po celém světě.</desc>
     <ul class="button-list">
       <li><a class="button button-img" href="/stala_nabidka"><span class="fas fa-3x fa-clipboard-list">i</span>Stálá nabídka jídel</a></li>
       <li><a class="button button-img" href="/napojovy_listek"><span class="fas fa-3x fa-mug-hot">i</span>Nápojový lístek</a></li>
