--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
     </dl>
     <dl class="card card-emph booking">
       <dt>Rezervace</dt>
-      <dd>Do 14 osob<br/>Pouze telefonicky na čísle <a href="tel:+420777330050">+420 777 330 050</a></dd>
-      <dd><a var="inputvar-term-booking1">15 až 30 osob</a></dd>
-      <dd><a var="inputvar-term-booking2">Nad 30 osob</a></dd>
+      <dd>Do 14 osob lze rezervovat pouze telefonicky na čísle <a href="tel:+420777330050">+420 777 330 050</a></dd>
+      <dd><a var="inputvar-term-booking1">Rezervace pro 15 až 30 osob</a></dd>
+      <dd><a var="inputvar-term-booking2">Rezervace nad 30 osob</a></dd>
       <dd>Rezervace držíme 30 minut. Děkujeme za pochopení.</dd>
     </dl>
 <!--
