--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <h id="novinky">Odběr novinek</h>
       <desc>Naše registrované zákazníky informujeme o grilovačkách a dalších pořádaných akcích. Pro registraci stačí uvést e-mailovou adresu. Registraci je možné kdykoli zrušit.</desc>
       <p var="contactform-news">The newsletter subscription form is currently not available</p>
-      <h id="contact_form">Contact Form</h>
+      <h id="contact_form">Kontaktní formulář</h>
       <desc>Pošlete nám dotaz nebo zpětnou vazbu, jak se vám u nás líbilo nebo v čem bychom se mohli zlepšit. Pokud uvedete kontaktní údaje, můžete očekávat naší odpověď. <span var="inputvar-rezervace">n/a</span></desc>
       <p var="contactform-basic"/>
       <h id="dotazy">Často kladené dotazy</h>
