--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <ul class="button-list">
       <li><a class="button button-img" href="#denni_nabidka"><span class="fas fa-3x fa-utensils">i</span>Denní nabídka</a></li>
       <li><a class="button button-img" href="#akce"><span class="fas fa-3x fa-calendar-check">i</span>Víkendová akce</a></li>
-      <li><a class="button button-img" href="#stala_nabidka"><span class="fas fa-3x fa-clipboard-list">i</span>Kde nás najdete</a></li>
-      <li><a class="button button-img" href="https://www.google.cz/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1"><span class="fas fa-3x fa-map-marked-alt">i</span>Where to find us</a></li>
+      <li><a class="button button-img" href="#stala_nabidka"><span class="fas fa-3x fa-clipboard-list">i</span>Stálá nabídka</a></li>
+      <li><a class="button button-img" href="https://www.google.cz/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1"><span class="fas fa-3x fa-map-marked-alt">i</span>Kde nás najdete</a></li>
       <li><a class="button button-img" href="https://www.facebook.com/Steakgrill/"><span class="fab fa-3x fa-facebook">i</span>Náš Facebook</a></li>
     </ul>
     <h id="o_nas">O nás</h>
