--- a/index.html
+++ b/index.html
@@ -149,17 +149,17 @@
       <dd>pátek a sobota do 23 hodin.</dd>
       <dt>Informace pro hosty</dt>
       <dd>Přijímáme platební karty</dd>
-      <dd>Děti vítány</dd>
-      <dd>Wi-Fi v celém prostoru restaurace</dd>
+      <dd>Děti jsou vítány</dd>
+      <dd>WiFi v celém prostoru restaurace</dd>
       <dd>Klimatizováno</dd>
       <dd>Možnost návštěvy se psem</dd>
     </dl>
     <dl class="card card-emph booking">
       <dt>Rezervace</dt>
-      <dd>Do 14 osob lze rezervovat pouze telefonicky na čísle <a href="tel:+420777330050">+420 777 330 050</a></dd>
-      <dd><a var="inputvar-term-booking1">Rezervace pro 15 až 30 osob</a></dd>
-      <dd><a var="inputvar-term-booking2">Rezervace nad 30 osob</a></dd>
-      <dd>Rezervace držíme 30 minut. Děkujeme za pochopení.</dd>
+      <dd>Do 14 osob lze rezervovat pouze telefonicky na čísle <a href="tel:+420777330050">+420 777 330 050</a>.</dd>
+      <dd><a var="inputvar-term-booking1">Rezervace pro 15 až 30 osob?</a></dd>
+      <dd><a var="inputvar-term-booking2">Rezervace nad 30 osob?</a></dd>
+      <dd>O víkendech doporučujeme provést rezervaci místa. Rezervace držíme 30 minut. Děkujeme za pochopení.</dd>
     </dl>
 <!--
     <dl>
