--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <dd>Do 14 osob lze rezervovat pouze telefonicky na čísle <a href="tel:+420777330050">+420 777 330 050</a>.</dd>
       <dd><a var="inputvar-term-booking1">Rezervace pro 15 až 30 osob?</a></dd>
       <dd><a var="inputvar-term-booking2">Rezervace nad 30 osob?</a></dd>
-      <dd>O víkendech doporučujeme provést rezervaci místa. Rezervace držíme 30 minut. Děkujeme za pochopení.</dd>
+      <dd>O víkendech doporučujeme provádět rezervace. Rezervace držíme 30 minut. Děkujeme za pochopení.</dd>
     </dl>
 <!--
     <dl>
