--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <desc>Před položením dotazu si můžete projít následující seznam. Obsahuje odpovědi na nejčastěji kladené otázky.</desc>
       <dl class="faq">
         <dt>Nabízíte dárkové poukázky?</dt>
-        <dd>Ano, dárkové vouchery nabízíme v hodnotě 500 Kč a 1000 Kč. Platnost voucheru je rok od data zakoupení.</dd>
+        <dd>Ano, dárkové vouchery nabízíme v hodnotě 500 Kč a 1000 Kč. Platnost voucheru je rok od data zakoupení a a lze je zakoupit na baru restaurace nebo po dohodě poslat poštou.</dd>
         <dt>Přijímáte stravenky?</dt>
         <dd>Od roku 2019 už není možné uplatnit stravenky v restauraci.</dd>
         <dt>Můžu u vás platit kartou?</dt>
