--- a/plugins/InputVar/InputVar.html
+++ b/plugins/InputVar/InputVar.html
@@ -13,7 +13,7 @@
     <dd>Začínejte každou informaci (každý řádek v poli administrace) velkým písmenem.</dd>
     <dd>Pokud si nejste jistý, jak napsat např. cenu nebo rozmezí cen, zkopírujte text ze stálé nabídky a upravte ho.</dd>
     <dd>Za popis jídla patří tečka (v rámci konzistence). Tím pádem by mělo jít o větu, která obsahuje podmět a přísudek (nikoli jakoby pokračování nadpisu).</dd>
-    <dd>Vkládejte text vždy se zachováním standardní velikosti písmen. Slova VELKÝMI PÍSMENY mohou být interpretované jako zkratky místo slov (např. slovo <samp>JEHNĚ</samp> mohou čtečky číst jako <samp>jé-é-há-en-ésháčkem</samp>). O zobrazení se postará styl, který může písmena zvětšit. (Poznámka: běžný text VELKÝMI PÍSMENY je navíc na internetu považován za křik.)</dd>
+    <dd>Vkládejte text vždy se zachováním standardní velikosti písmen. Slova VELKÝMI PÍSMENY mohou být interpretovaná jako zkratky (např. slovo <samp>JEHNĚ</samp> mohou čtečky číst jako <samp>jé-é-há-en-ésháčkem</samp>). O zobrazení se postará styl, který může písmena jakkoli transformovat (včetně zvětšení). Poznámka: běžný text VELKÝMI PÍSMENY je navíc na internetu považován za křik.</dd>
     <dt>Typografie</dt>
     <dd>V anglických nadpisech patří velká písmena na začátek jednotlivých slov (např. <samp>Scotch Broth</samp>, <samp>Pepper Steak</samp>). V českých nadpisech jen na začátek (např. <samp>Hovězí vývar</samp>, <samp>Tatarský steak</samp>).</dd>
     <dd>Rozlišujte pomlčku (<samp>–</samp>) a rozdělovník (<samp>-</samp>), případně anglickou pomlčku (<samp>—</samp>). Pokud pomlčka rozděluje pouze dvě slova, nepatří kolem ní mezery (<samp>1.–2. května</samp>). V opačném případě kolem pomlčky mezery v češtině patří (<samp>30. dubna – 1. května</samp>).</dd>
