--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
 <!--
 -->
     <section>
-      <h id="denni_nabidka" var="inputvar-nabidka" title="Denní nabídka…" class="break nobalance">Denní nabídka</h>
+      <h id="denni_nabidka" var="inputvar-nabidka" title="Denní nabídka" class="break nobalance">Denní nabídka</h>
       <desc var="inputvar-nabidka-popis">n/a</desc>
       <dl var="inputvar-nabidka-polevka1" class="meal" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-nabidka-polevka2" class="meal" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-nabidka-jidlo1" class="meal" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-nabidka-jidlo2" class="meal" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
-      <h id="akce" var="inputvar-vikendova-akce" title="Víkendová akce…" class="break nobalance">Víkendová akce</h>
+      <h id="akce" var="inputvar-vikendova-akce" title="Víkendová akce" class="break nobalance">Víkendová akce</h>
       <desc var="inputvar-akce-popis">n/a</desc>
       <dl var="inputvar-akce-predkrm1" class="meal" data-type="Starter"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-akce-predkrm2" class="meal" data-type="Starter"><dt>n/a</dt><dd>n/a</dd></dl>
