--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
       <dd>Otevřeno denně od 11 do 22 hodin,</dd>
       <dd>pátek a sobota do 23 hodin.</dd>
       <dt>Informace pro hosty</dt>
-      <dd>Objednávky přijímáme nejpozději hodinu před koncem otevírací doby</dd>
-      <dd>Přijímáme platební karty</dd>
-      <dd>Děti jsou vítány</dd>
-      <dd>WiFi v celém prostoru restaurace</dd>
-      <dd>Klimatizováno</dd>
-      <dd>Možnost návštěvy se psem</dd>
+      <dd>Objednávky jídel přijímáme nejpozději hodinu před koncem otevírací doby.</dd>
+      <dd>Přijímáme platební karty.</dd>
+      <dd>Děti jsou vítány.</dd>
+      <dd>WiFi v celém prostoru restaurace.</dd>
+      <dd>Klimatizováno.</dd>
+      <dd>Možnost návštěvy se psem.</dd>
     </dl>
     <dl class="card card-emph booking">
       <dt>Rezervace</dt>
