--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <dl>
         <dt><img src="/files/thumbs/design/klima.png" alt="M. D. Klíma"/></dt>
         <dd><q>Dejte lidem co chtějí a co jim za jejich peníze patří.</q></dd>
-        <dd>— <a href="#concept">M. D. Klíma, zakladatel konceptu STEAKGRILL®</a></dd>
+        <dd>— <a href="https://www.hostovka.cz/?clanky=zivotopis">M. D. Klíma, zakladatel konceptu STEAKGRILL®</a></dd>
         <dd><span class="fas fa-3x fa-quote-right">i</span></dd>
       </dl>
       <h id="staly_listek" src="stala_nabidka.html">Stálá nabídka jídel</h>
