--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <dd><q>Brzy do postele, brzy vstát, propagovat se a tvrdě pracovat!</q></dd>
         <dd><strong>Michael Dobromil Klíma</strong> – zakladatel konceptu STEAKGRILL®</dd>
         <dd>* 23. 6. 1928 až † 15. 10. 2011</dd>
-        <dd><a href="https://www.hostovka.cz/?clanky=zivotopis">Mikeův životní příběh</a> jako jeden z článků <a href="https://www.hostovka.cz">Mikeovy pomyslné univerzity pro hosty</a></dd>
+        <dd><a href="https://www.hostovka.cz/?stitek=Zivotopis#clanky">Mikeův životní příběh</a> jako jeden z článků <a href="https://www.hostovka.cz">Mikeovy pomyslné univerzity pro hosty</a></dd>
       </dl>
       <h id="steaky">Naše steakové maso</h>
       <desc>Hovězí steaky připravujeme z vyzrálého masa s vysokým stupněm mramorování. Steaky propékáme přesně podle přání hosta (viz stupně propečenosti níže). Pokud si nejste jistí, personál je vždy připraven vám poradit.</desc>
@@ -121,7 +121,7 @@
       <dl>
         <dt><img src="/files/thumbs/design/klima.png" alt="M. D. Klíma"/></dt>
         <dd><q>Dejte lidem co chtějí a co jim za jejich peníze patří.</q></dd>
-        <dd>— <a href="https://www.hostovka.cz/?clanky=zivotopis">M. D. Klíma, zakladatel konceptu STEAKGRILL®</a></dd>
+        <dd>— <a href="https://www.hostovka.cz/?stitek=Zivotopis#clanky">M. D. Klíma, zakladatel konceptu STEAKGRILL®</a></dd>
         <dd><span class="fas fa-3x fa-quote-right">i</span></dd>
       </dl>
       <h id="staly_listek" src="stala_nabidka.html">Stálá nabídka jídel</h>
