--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -3,7 +3,7 @@
   <h id="vinny_listek" author="InternetGuru" ctime="2018-03-28">Vinný lístek</h>
   <desc>Vinný lístek sestavuje přední český specialista přímo na míru naší restauraci. Hlavním kritériem volby je vedle nabídky jídel také přijatelná cena. Vína nabízíme francouzská, italská a česká.</desc>
   <section class="contenttoc">
-    <h id="sekty" title="Sekty a Prosecco">Sekty a Prosecco</h>
+    <h id="sekty" title="Sekty a Prosecco…">Sekty a Prosecco</h>
     <desc>n/a</desc>
     <dl class="meal">
       <dt>Louis Perdier Demi Sec</dt>
@@ -39,7 +39,7 @@
       </dd>
     </dl>
 
-    <h id="rozlevana_vina" class="break" title="Rozlévaná vína">Rozlévaná vína</h>
+    <h id="rozlevana_vina" class="break" title="Rozlévaná vína…">Rozlévaná vína</h>
     <desc>n/a</desc>
     <dl class="meal">
       <dt>Zafrica – polosuché bílé</dt>
@@ -50,9 +50,9 @@
       </dd>
     </dl>
     <dl class="meal">
-      <dt>Chardonnay <a var="inputvar-term-igp">IGP</a> – suché bílé</dt>
+      <dt>Chardonnay <a var="inputvar-term-igtigp">IGP</a> – suché bílé</dt>
       <dd>Oblast Francie, Languedoc.</dd>
-      <dd>Lehké bílé vínobílé víno s vůní bílých květin a koření.</dd>
+      <dd>Lehké bílé vínobílé víno s vůní bílých květin a koření.</dd>
       <dd class="price">
         <span><span>0,2 l</span><span>56 Kč</span></span>
       </dd>
@@ -82,7 +82,7 @@
       </dd>
     </dl>
 
-    <h id="bila_vina" class="break" title="Bílá vína">Bílá vína</h>
+    <h id="bila_vina" class="break" title="Bílá vína…">Bílá vína</h>
     <desc>n/a</desc>
 
     <dl class="meal">
@@ -122,7 +122,7 @@
     </dl>
 
     <dl class="meal">
-      <dt>Grillo IGT 2015 – suché</dt>
+      <dt>Grillo <a var="inputvar-term-igtigp">IGT</a> 2015 – suché</dt>
       <dd>Oblast Sicílie, Noto.</dd>
       <dd>Víno slámově žluté barvy se zlatými odstíny. Intenzivní květová vůně smíšená s tóny citrusů a žlutých broskví, tóny trávy a sladkých mandlí. Vyvážená, svěží a bohatá chuť.</dd>
       <dd class="price">
@@ -130,7 +130,7 @@
       </dd>
     </dl>
 
-    <h id="cervena_vina" class="break" title="Červená vína">Červená vína</h>
+    <h id="cervena_vina" class="break" title="Červená vína…">Červená vína</h>
     <desc>n/a</desc>
 
     <dl class="meal">
@@ -161,7 +161,7 @@
     </dl>
 
     <dl class="meal">
-      <dt>Nero d´Avola IGT 2015 – suché</dt>
+      <dt>Nero d´Avola <a var="inputvar-term-igtigp">IGT</a> 2015 – suché</dt>
       <dd>Oblast Sicílie, Noto</dd>
       <dd>S rubínově červenou barvou je v tomto víně překypující pikantní aroma řervených bobulí s výraznými ovocnými tóny. Chuť je harmonická s příjemnou strukturou.</dd>
       <dd class="price">
