--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
   <h id="napojovy_listek" author="InternetGuru" ctime="2018-03-28">Nápojový lístek</h>
-  <desc>Naše domácí limonády z čerstvého ovoce Vás osvěží za horkého dne a náš připravovaný pečený čaj zahřeje v sychravém počasí. Pivařům čepujeme Plzeň s občasnou nabídkou piv z malých pivovarů a nezaostáváme v širší nabídce kvalitních rumů.</desc>
+  <desc>Naše domácí limonády z čerstvého ovoce Vás osvěží za horkého dne a náš připravovaný pečený čaj zahřeje v sychravém počasí. Pivařům čepujeme Plzeň s občasnou nabídkou piv z malých pivovarů a nezaostáváme v širší nabídce kvalitních rumů.</desc>
   <section class="contenttoc">
     <h id="alkoholicke" title="Alkoholické nápoje, pivo…">Alkoholické nápoje, pivo</h>
     <desc>n/a</desc>
@@ -28,7 +28,7 @@
       <dd>Irské černé pivo</dd>
     </dl>
 
-    <h id="michane" class="break" title="Míchané nápoje, aperitivy a sekty…">Míchané nápoje, aperitivy a sekty</h>
+    <h id="michane" class="break" title="Míchané nápoje, aperitivy a sekty…">Míchané nápoje, aperitivy a sekty</h>
     <desc>n/a</desc>
 <!--     <desc>U obsluhy je možné si vyžádat lístek míchaních nápojů, na kterém jsou jednotlivé
 nápoje detailněji popsány včetně složení.</desc> -->
@@ -38,7 +38,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd>Crodino, soda, plátek pomeranče, led</dd>
       <dt>Aperol Spritz</dt>
       <dd class="price">90 Kč</dd>
-      <dd>Aperol, prosecco DOC, soda, plátek pomeranče, led</dd>
+      <dd>Aperol, prosecco <a var="inputvar-term-doc">DOC</a>, soda, plátek pomeranče, led</dd>
       <dt>Tanqueray &amp; East Imperial Tonic</dt>
       <dd class="price">90 Kč</dd>
       <dd>Londýnský gin, tonic East Imperial, plátek limetky, led</dd>
@@ -47,10 +47,10 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd>Vodka Russian Standard, zázvorové pivo East Imperial, limetka, led</dd>
       <dt>Cuba Libre</dt>
       <dd class="price">90 Kč</dd>
-      <dd>Světlý rum Havana 3 YO, Coca Cola, limetka, led</dd>
+      <dd>Světlý rum Havana 3 <a var="inputvar-term-yo">YO</a>, Coca Cola, limetka, led</dd>
       <dt>Mojito</dt>
       <dd class="price">90 Kč</dd>
-      <dd>Světlý rum Havana 3 YO, soda, třtinový cukr, limetka, máta, led</dd>
+      <dd>Světlý rum Havana 3 <a var="inputvar-term-yo">YO</a>, soda, třtinový cukr, limetka, máta, led</dd>
       <dt>Cinzano Bianco <span>0,1 l</span></dt>
       <dd class="price">45 Kč</dd>
       <dt>Campari <span>0,05 l</span></dt>
@@ -107,12 +107,13 @@ nápoje detailněji popsány včetně složení.</desc> -->
 
     <h id="horke" class="break" title="Horké nápoje, káva a čaj…">Horké nápoje, káva a čaj</h>
     <desc>n/a</desc>
+    <p class="print"><img src="/files/thumbs/coffee.jpg" alt="Coffee"/></p>
     <dl class="meal meal-oneline">
       <dt>Espresso</dt>
       <dd class="price">37 Kč</dd>
       <dt>Espresso lungo</dt>
       <dd class="price">39 Kč</dd>
-      <dt>Dopio (2× Espresso)</dt>
+      <dt>Dopio (2× Espresso)</dt>
       <dd class="price">75 Kč</dd>
       <dt>Cappucino</dt>
       <dd class="price">43 Kč</dd>
@@ -147,7 +148,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
     </dl>
 
     <h id="rumy" class="break">Rumy a pálenky</h>
-    <desc>Rumy a pálenky se podávají v objemu 0,4 cl. Pro více informací o jednotlivých rumech požádejte obsluhu o rumový lístek.</desc>
+    <desc>Rumy a pálenky se podávají v objemu 0,4 cl. Pro více informací o jednotlivých rumech požádejte obsluhu o rumový lístek.</desc>
     <dl class="meal meal-oneline">
       <dt>Diplomático Mantuano</dt>
       <dd class="price">80 Kč</dd>
@@ -159,19 +160,19 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">240 Kč</dd>
       <dt>Millonario 10 Aniversario Reserva</dt>
       <dd class="price">120 Kč</dd>
-      <dt>Auténtico Nativo 15 YO</dt>
+      <dt>Auténtico Nativo 15 <a var="inputvar-term-yo">YO</a></dt>
       <dd class="price">100 Kč</dd>
       <dt>Pyrat XO Reserve</dt>
       <dd class="price">90 Kč</dd>
-      <dt>Angostura 5 YO</dt>
+      <dt>Angostura 5 <a var="inputvar-term-yo">YO</a></dt>
       <dd class="price">60 Kč</dd>
-      <dt>Angostura 7 YO</dt>
+      <dt>Angostura 7 <a var="inputvar-term-yo">YO</a></dt>
       <dd class="price">80 Kč</dd>
       <dt>Kraken Black Spiced</dt>
       <dd class="price">50 Kč</dd>
       <dt>Don Papa</dt>
       <dd class="price">100 Kč</dd>
-      <dt>Legendario Elixir 7 YO</dt>
+      <dt>Legendario Elixir 7 <a var="inputvar-term-yo">YO</a></dt>
       <dd class="price">60 Kč</dd>
       <dt>Six Saints</dt>
       <dd class="price">100 Kč</dd>
@@ -184,7 +185,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
     </dl>
 
     <h id="destilaty" class="break" title="Destiláty">Destiláty</h>
-    <desc>Nabízíme obecně známé destiláty, které podáváme v objemu 0,4 cl.</desc>
+    <desc>Nabízíme obecně známé destiláty, které podáváme v objemu 0,4 cl.</desc>
     <dl class="meal meal-oneline">
       <dt>Captain Morgan</dt>
       <dd class="price">50 Kč</dd>
