--- a/plugins/InputVar/InputVar.html
+++ b/plugins/InputVar/InputVar.html
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="cs" ns="https://www.steakgrill.cz" class="inputvar">
   <h author="InternetGuru" ctime="2015-06" id="inputvar">Administrace akční nabídky jídel</h>
-  <desc kw="administrace, InputVar">Při úpravě textů dbejte na <a href="https://cs.wikipedia.org/wiki/Wikipedie:Typografick%C3%A9_rady" title="Wikipedie: Typografické rady">obecná pravidla typografie</a>, zejména pak na výčet typických nedostatků (níže). Před uložením si texty po sobě přečtěte s odstupem aspoň několika minut. Po uložení si texty projděte znovu, ideálně požádejte kolegu. Pro skrytí jídla nechte pole prázdné.</desc>
+  <desc kw="administrace, InputVar">Při úpravě textů dbejte na <a href="https://cs.wikipedia.org/wiki/Wikipedie:Typografick%C3%A9_rady" title="Wikipedie: Typografické rady">obecná pravidla typografie</a>, zejména pak na výčet typických nedostatků (níže). Před uložením si texty po sobě přečtěte s odstupem aspoň několika minut. Po uložení si texty projděte znovu, ideálně požádejte kolegu. Pro skrytí jídla nechte pole prázdné.</desc>
 
   <dl>
-    <dt>Terminologie a pravopis</dt>
-    <dd>Minimalizujte používání cizích termínů a žargonu! Ujistěte se, že neexistuje vhodný překlad. Čeští uživatelé preferují srozumitelnou (spisovnou) češtinu. Neznámé termíny je spíše odrazují.</dd>
-    <dd>Cizí termíny vždy patřičně vysvětlete, přeložte či opište (např. <samp>vývar</samp> a nikoli <del><samp>browth</samp></del>). Případně můžete použít interaktivní slovník pojmů, např. <a var="inputvar-term-sous-vide">sous-vide</a>.</dd>
-    <dd>Pozor na správné použití cizích termínů (např. <samp>au jus</samp> a nikoli <del><samp>Jus</samp></del>).</dd>
-    <dd>K ověření pravopisu můžete použít <a href="http://prirucka.ujc.cas.cz/" title="Internetová jazyková příručka">internetovou příručku</a> či internet obecně.</dd>
+    <dt>Terminologie a pravopis</dt>
+    <dd>Minimalizujte používání cizích termínů a žargonu! Ujistěte se, že neexistuje vhodný překlad. Čeští uživatelé preferují srozumitelnou (spisovnou) češtinu. Neznámé termíny je spíše odrazují.</dd>
+    <dd>Cizí termíny vždy patřičně vysvětlete, přeložte či opište (např. <samp>vývar</samp> a nikoli <del><samp>browth</samp></del>). Případně můžete použít interaktivní slovník pojmů, např. <a var="inputvar-term-sous-vide">sous-vide</a>.</dd>
+    <dd>Pozor na správné použití cizích termínů (např. <samp>au jus</samp> a nikoli <del><samp>Jus</samp></del>).</dd>
+    <dd>K ověření pravopisu můžete použít <a href="http://prirucka.ujc.cas.cz/" title="Internetová jazyková příručka">internetovou příručku</a> či internet obecně.</dd>
     <dt>Konzistence</dt>
-    <dd>Začínejte každou informaci (každý řádek v poli administrace) velkým písmenem.</dd>
-    <dd>Pokud si nejste jistý, jak napsat např. cenu nebo rozmezí cen, zkopírujte text ze stálé nabídky a upravte ho.</dd>
-    <dd>Za popis jídla patří tečka (v rámci konzistence). Tím pádem by mělo jít o větu, která obsahuje podmět a přísudek (nikoli jakoby pokračování nadpisu).</dd>
-    <dd>Vkládejte text vždy se zachováním standardní velikosti písmen. Slova VELKÝMI PÍSMENY mohou být interpretovaná jako zkratky (např. slovo <samp>JEHNĚ</samp> mohou čtečky číst jako <samp>jé-é-há-en-ésháčkem</samp>). O zobrazení se postará styl, který může písmena jakkoli transformovat (včetně zvětšení). Poznámka: běžný text VELKÝMI PÍSMENY je navíc na internetu považován za křik.</dd>
+    <dd>Začínejte každou informaci (každý řádek v poli administrace) velkým písmenem.</dd>
+    <dd>Pokud si nejste jistý, jak napsat např. cenu nebo rozmezí cen, zkopírujte text ze stálé nabídky a upravte ho.</dd>
+    <dd>Za popis jídla patří tečka (v rámci konzistence). Tím pádem by mělo jít o větu, která obsahuje podmět a přísudek (nikoli jakoby pokračování nadpisu).</dd>
+    <dd>Vkládejte text vždy se zachováním standardní velikosti písmen. Slova VELKÝMI PÍSMENY mohou být interpretovaná jako zkratky (např. slovo <samp>JEHNĚ</samp> mohou čtečky číst jako <em>jé-é-há-en-ésháčkem</em>). O zobrazení se postará styl, který může písmena jakkoli transformovat (včetně zvětšení). Poznámka: běžný text VELKÝMI PÍSMENY je navíc na internetu považován za křik.</dd>
     <dt>Typografie</dt>
-    <dd>V anglických nadpisech patří velká písmena na začátek jednotlivých slov (např. <samp>Scotch Broth</samp>, <samp>Pepper Steak</samp>). V českých nadpisech jen na začátek (např. <samp>Hovězí vývar</samp>, <samp>Tatarský steak</samp>).</dd>
-    <dd>Rozlišujte pomlčku (<samp>–</samp>) a rozdělovník (<samp>-</samp>), případně anglickou pomlčku (<samp>—</samp>). Pokud pomlčka rozděluje pouze dvě slova, nepatří kolem ní mezery (<samp>1.–2. května</samp>). V opačném případě kolem pomlčky mezery v češtině patří (<samp>30. dubna – 1. května</samp>).</dd>
-    <dd>Rozlišujte <samp>„české“</samp> a <samp>“anglické”</samp> uvozovky od znaku pro palce (<samp>"</samp>).</dd>
-    <dd>Apostrof a čárka jsou rozdílné znaky, tedy např. <samp>Fisherman's Chowder</samp> a nikoli <del><samp>Fisherman´s Chowder</samp></del> či <del><samp>Fisherman`s Chowder</samp></del></dd>
-    <dd>Mezi číslo a jednotku patří mezera, pokud se jedná o dvě slova (např. <samp>sto gramů = 100 g</samp>, kdežto <samp>stogramový = 100g</samp>). Totéž platí např. pro procenta a další znaky.</dd>
-    <dd>Na velikosti písmen záleží, zejména také u jednotek (např. <samp>g = gram</samp>, <samp>G = giga</samp>).</dd>
-    <dd>Za interpunkční znaménka (jako je tečka, čárka atp.) patří mezera, až na výjimky jako např. konec závorky v této větě.</dd>
-    <dd>Mezi některá slova patří <a var="inputvar-term-nbsp">pevná mezera</a>. Jedná se o veškerá <a var="inputvar-term-zalomeni-radku">slova nevhodná na konec řádku</a> (jako např. jednopísmenné předložky) bez ohledu na jejich umístění v textu, neboť při tisku či na jiném zařízení se mohou vyskytnout na konci řádku.</dd>
+    <dd>V anglických nadpisech patří velká písmena na začátek jednotlivých slov (např. <samp>Scotch Broth</samp>, <samp>Pepper Steak</samp>). V českých nadpisech jen na začátek (např. <samp>Hovězí vývar</samp>, <samp>Tatarský steak</samp>).</dd>
+    <dd>Rozlišujte pomlčku (<samp>–</samp>) a rozdělovník (<samp>-</samp>), případně anglickou pomlčku (<samp>—</samp>). Pokud pomlčka rozděluje pouze dvě slova, nepatří kolem ní mezery (<samp>1.–2. května</samp>). V opačném případě kolem pomlčky mezery v češtině patří (<samp>30. dubna – 1. května</samp>).</dd>
+    <dd>Rozlišujte <samp>„české“</samp> a <samp>“anglické”</samp> uvozovky od znaku pro palce (<samp>"</samp>).</dd>
+    <dd>Apostrof a čárka jsou rozdílné znaky, tedy např. <samp>Fisherman's Chowder</samp> a nikoli <del><samp>Fisherman´s Chowder</samp></del> či <del><samp>Fisherman`s Chowder</samp></del>.</dd>
+    <dd>Mezi číslo a jednotku patří mezera, pokud se jedná o dvě slova (např. <samp>sto gramů = 100 g</samp>, kdežto <samp>stogramový = 100g</samp>). Totéž platí např. pro procenta a další znaky.</dd>
+    <dd>Na velikosti písmen záleží; zejména také u jednotek (např. <samp>g = gram</samp>, <samp>G = giga</samp>).</dd>
+    <dd>Za interpunkční znaménka (jako je tečka, čárka atp.) patří mezera, až na výjimky jako např. konec závorky v této větě.</dd>
+    <dd>Mezi některá slova patří <a var="inputvar-term-nbsp">pevná mezera</a>. Jedná se o veškerá <a var="inputvar-term-zalomeni-radku">slova nevhodná na konec řádku</a> (jako např. jednopísmenné předložky) bez ohledu na jejich umístění v textu, neboť při tisku či na jiném zařízení se mohou vyskytnout na konci řádku.</dd>
   </dl>  
  
   <form class="editable fillable validable validateform-10 eventable-noevent" id="inputvarform" action="/" method="post" var="action@action">
