--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
   <h id="stala_nabidka" author="InternetGuru" ctime="2018-03-28">Stálá nabídka jídel</h>
-  <desc>Nabízíme populární jídla mezinárodní kuchyně. Mimo steaků a burgerů si přijdou na své i milovníci salátů a netradičních polévek, pro které je náš podnik také vyhlášený.</desc>
+  <desc>Nabízíme populární jídla mezinárodní kuchyně. Mimo steaků a burgerů si přijdou na své i milovníci salátů a netradičních polévek, pro které je náš podnik také vyhlášený.</desc>
   <section class="contenttoc">
     <h id="polevky">Polévky</h>
     <desc>Po celý den připravujeme čtyři druhy polévek. Polévky jsou dle vlastní Mikeovy receptury. Takové jinde neochutnáte!</desc>
@@ -9,9 +9,8 @@
       <li><a href="/files/full/design/soups.jpg"><img src="/files/design/soups.jpg" alt="Soups"/></a></li>
     </ul>
     <dl class="meal">
-      <dt>Texaské chilli</dt>
-      <dd>Americká specialita. Hustá pálivá polévka plná mletého hovězího a vepřového masa, drcených rajčat, Jalapeño papriček a fazolí.</dd>
-      <dd>Polévku přezdíváme „vítězné chilli“, protože s ní Mike vyhrál v Americe první cenu – $5 000. Doporučujeme s česnekovou bagetou.</dd>
+      <dt><a var="inputvar-term-chilli">Texaské chilli</a></dt>
+      <dd>Americká specialita. Hustá pálivá polévka plná mletého hovězího a vepřového masa, drcených rajčat, Jalapeño papriček a fazolí. Doporučujeme s česnekovou bagetou.</dd>
       <dt class="price">Cena</dt>
       <dd class="price multiple">
         <span><span>malé</span><span>55 Kč</span></span>
@@ -21,7 +20,7 @@
     </dl>
     <dl class="meal">
       <dt>Kachní kaldoun</dt>
-      <dd>Česká specialita. Hustá bešamelová polévka se zeleninou, kachními drůbky, širokými nudlemi a houskovými knedlíčky.</dd>
+      <dd>Česká specialita. Hustá <a var="inputvar-term-besamel">bešamelová</a> polévka se zeleninou, kachními drůbky, širokými nudlemi a houskovými knedlíčky.</dd>
       <dt class="price">Cena</dt>
       <dd class="price multiple">
         <span><span>malý</span><span>49 Kč</span></span>
@@ -52,25 +51,25 @@
     <desc>Hamburgery připravujeme tradičně – velké a šťavnaté. Těstoviny doporučujeme jako lehčí alternativu k jídlu pro menší strávníky.</desc>
     <dl class="meal">
       <dt>Chicken Burger</dt>
-      <dd>Grilovaný marinovaný kuřecí steak, sezamová bulka, okurka, ledový salát, naše BBQ omáčka, hranolky, salát coleslaw.</dd>
+      <dd>Grilovaný marinovaný kuřecí steak, sezamová bulka, okurka, ledový salát, naše <a var="inputvar-term-bbq">BBQ</a> omáčka, hranolky, salát Coleslaw.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">185 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Cheese Burger</dt>
-      <dd>Grilovaný steak z mletého hovězího krku (180 g), sezamová bulka, naše BBQ omáčka, sýr, rajče, slanina, ledový salát, cibule, okurka, hranolky, salát coleslaw.</dd>
+      <dd>Grilovaný steak z mletého hovězího krku (180 g), sezamová bulka, naše <a var="inputvar-term-bbq">BBQ</a> omáčka, sýr, rajče, slanina, ledový salát, cibule, okurka, hranolky, salát Coleslaw.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">239 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Chicken Penne Pomodoro</dt>
-      <dd>Kuřecí prsa na nudličky (100 g), italské těstoviny s rajčatovou omáčkou a čerstvou bazalkou se smetanou, strouhaný sýr Grana Padano, olivový olej.</dd>
+      <dd>Kuřecí prsa na nudličky (100 g), italské těstoviny s rajčatovou omáčkou a čerstvou bazalkou se smetanou, strouhaný sýr <a var="inputvar-term-grana-padano">Grana Padano</a>, olivový olej.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">169 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Tagliatelle Funghi s krůtím prsem <a var="inputvar-term-sous-vide">sous-vide</a></dt>
-      <dd>Italské široké nudle s delikátní omáčkou z lesních hub, krůtí prso vařené metodou <a var="inputvar-term-sous-vide">sous-vide</a> na vnitřní teplotu 57 °C (vaření ve vakuu), sýr Grana Padano, olivový olej.</dd>
+      <dd>Italské široké nudle s delikátní omáčkou z lesních hub, krůtí prso vařené metodou <a var="inputvar-term-sous-vide">sous-vide</a> na vnitřní teplotu 57 °C (vaření ve vakuu), sýr <a var="inputvar-term-grana-padano">Grana Padano</a>, olivový olej.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">169 Kč</dd>
     </dl>
@@ -87,8 +86,8 @@
       <dd class="price">209 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt>Caesar salát</dt>
-      <dd>Populární mexický salát z Tijuany. Římský salát, krutony, strouhaný sýr Grana Padano, Caesar dresing.</dd>
+      <dt><a var="inputvar-term-caesar-salat">Caesar salát</a></dt>
+      <dd>Populární mexický salát z Tijuany. Římský salát, krutony, strouhaný sýr <a var="inputvar-term-grana-padano">Grana Padano</a>, Caesar dresing.</dd>
       <dt class="price">Cena</dt>
       <dd class="price multiple">
         <span><span>malý</span><span>79 Kč</span></span>
@@ -96,8 +95,8 @@
       </dd>
     </dl>
     <dl class="meal">
-      <dt>Caesar salát s grilovaným kuřecím steakem</dt>
-      <dd>Římský salát, krutony, strouhaný sýr Grana Padano, Caesar dresing, grilovaný steak z marinovaných kuřecích prsou.</dd>
+      <dt><a var="inputvar-term-caesar-salat">Caesar salát</a> s grilovaným kuřecím steakem</dt>
+      <dd>Římský salát, krutony, strouhaný sýr <a var="inputvar-term-grana-padano">Grana Padano</a>, Caesar dresing, grilovaný steak z marinovaných kuřecích prsou.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">174 Kč</dd>
     </dl>
@@ -106,13 +105,13 @@
     <desc>Pro přípravu mezinárodních jídel používáme autentické nástroje. Kachní a krůtí maso vždy nakládáme či napichujeme a připravujeme metodou <a var="inputvar-term-sous-vide">sous-vide</a>.</desc>
     <dl class="meal">
       <dt>Crispy Salmon</dt>
-      <dd>Steak z chlazeného lososa upravený na olivovém oleji s extra křupavou kůží, šťouchané brambory s pórkem a slaninou, pečená cherry rajčata, náš dresing.</dd>
+      <dd>Steak z chlazeného lososa upravený na olivovém oleji s extra křupavou kůží, šťouchané brambory s pórkem a slaninou, pečená cherry rajčata, náš dresing.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">249 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt>Filírované kachní prso <a var="inputvar-term-sous-vide">sous-vide</a></dt>
-      <dd>Marinované kachní prso s rozmarýnem a olivovým olejem, vařené metodou <a var="inputvar-term-sous-vide">sous-vide</a>, následně opečené. Podávané s gratinovanými bramborami, krémovým špenátem a brusinkovou omáčkou.</dd>
+      <dt><a var="inputvar-term-filirovani">Filírované</a> kachní prso <a var="inputvar-term-sous-vide">sous-vide</a></dt>
+      <dd>Marinované kachní prso s rozmarýnem a olivovým olejem, vařené metodou <a var="inputvar-term-sous-vide">sous-vide</a>, následně opečené. Podávané s <a var="inputvar-term-gratinovani">gratinovanými</a> bramborami, krémovým špenátem a brusinkovou omáčkou.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">209 Kč</dd>
     </dl>
@@ -124,14 +123,14 @@
     </dl>
     <dl class="meal">
       <dt>Buffalo Wings, 400 g</dt>
-      <dd>Populární americké jídlo. Kuřecí křidélka obalená v naší speciální pikantní BBQ omáčce, hranolky, salát coleslaw.</dd>
+      <dd>Populární americké jídlo. Kuřecí křidélka obalená v naší speciální pikantní <a var="inputvar-term-bbq">BBQ</a> omáčce, hranolky, salát Coleslaw.</dd>
       <dd>Doporučujeme česnekový dip.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">185 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Chicken Cordon Bleu</dt>
-      <dd>Plátky burgundské šunky a sýru Goudy uzavřené do kuřecího prsa, smažené dozlatova v trojobalu, hranolky, salát coleslaw.</dd>
+      <dd>Plátky burgundské šunky a sýru Goudy uzavřené do kuřecího prsa, smažené dozlatova v trojobalu, hranolky, salát Coleslaw.</dd>
       <dd>Doporučujeme tatarskou omáčku.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">185 Kč</dd>
@@ -141,32 +140,32 @@
     <desc>Grilujeme prvotřídní marinované nikdy nemražené maso. Stejně jako u steaků je grilované maso vždy odleželé na ideální teplotu (nikoli přímo z lednice).</desc>
     <dl class="meal">
       <dt>Grilovaná hovězí játra</dt>
-      <dd>Steaky z hovězích jater grilované s cibulí a slaninou, hranolky, salát coleslaw.</dd>
+      <dd>Steaky z hovězích jater grilované s cibulí a slaninou, hranolky, salát Coleslaw.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">169 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Grilovaný vepřový šašlik</dt>
-      <dd>Marinovaná vepřová panenka grilovaná na špízu s cibulí a paprikou, zakončené rajčetem a žampionem, hranolky, salát coleslaw.</dd>
-      <dd>Doporučujeme BBQ dip.</dd>
+      <dd>Marinovaná vepřová panenka grilovaná na špízu s cibulí a paprikou, zakončené rajčetem a žampionem, hranolky, salát Coleslaw.</dd>
+      <dd>Doporučujeme <a var="inputvar-term-bbq">BBQ</a> dip.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">189 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Grilovaná panenka Madagaskar</dt>
-      <dd>Grilovaná panenka v celku, krájená na medailonky, smetanová omáčka s madagaskarským pepřem, gratinované brambory, krémový špenát.</dd>
+      <dd>Grilovaná panenka v celku, krájená na medailonky, smetanová omáčka s madagaskarským pepřem, <a var="inputvar-term-gratinovani">gratinované</a> brambory, krémový špenát.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">249 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt>BBQ Baby Back Ribs</dt>
-      <dd>Vepřová žebírka grilovaná v naší pikantní BBQ omáčce, hranolky, česnekový dresing.</dd>
+      <dt><a var="inputvar-term-bbq">BBQ</a> Baby Back Ribs</dt>
+      <dd>Vepřová žebírka grilovaná v naší pikantní <a var="inputvar-term-bbq">BBQ</a> omáčce, hranolky, česnekový dresing.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">249 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Grill Mix</dt>
-      <dd>Grilovaná vepřová panenka, hovězí játra, marinované kuřecí prso, slanina, šťouchané brambory s pórkem a slaninou, sázené vajíčko, BBQ dip, žampion, cibule, kukuřice O’Brien.</dd>
+      <dd>Grilovaná vepřová panenka, hovězí játra, marinované kuřecí prso, slanina, šťouchané brambory s pórkem a slaninou, sázené vajíčko, <a var="inputvar-term-bbq">BBQ</a> dip, žampion, cibule, kukuřice O’Brien.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">234 Kč</dd>
     </dl>
@@ -178,31 +177,31 @@
     </ul>
     <dl class="meal">
       <dt>Grilled Fillet Mignon, 180 g</dt>
-      <dd>Steak z hovězí svíčkové z mladého býčka (z českých chovů), obalený sušenou slaninou, šťouchané brambory s pórkem, slaninou a máslem, krémový špenát, grilovaný na vnitřní teplotu podle vašeho přání.</dd>
+      <dd>Steak z hovězí svíčkové z mladého býčka (z českých chovů), obalený sušenou slaninou, šťouchané brambory s pórkem, slaninou a máslem, krémový špenát, grilovaný na vnitřní teplotu podle vašeho přání.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">398 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Grilled Pork Chop, 300 g</dt>
-      <dd>Grilovaný steak z vepřové pečeně s kostí marinovaný v bylinkové marinádě, šťouchané brambory s pórkem a slaninou, pečená cherry rajčata, remuláda.</dd>
+      <dd>Grilovaný steak z vepřové pečeně s kostí marinovaný v bylinkové marinádě, šťouchané brambory s pórkem a slaninou, pečená cherry rajčata, remuláda.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">229 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Chuck Flap, 300 g</dt>
-      <dd>Grilovaný tence krájený steak ze severní Ameriky v druhé nejvyšší kvalitě – USDA Choice z plemene Black Angus, podávaný na horké plotýnce s restovanou cibulí, žampiony a paprikou, k tomu lahůdkové brambory s rozmarýnem a olivovým olejem, remuláda.</dd>
+      <dd>Grilovaný tence krájený steak ze severní Ameriky v druhé nejvyšší kvalitě – <a var="inputvar-term-usdachoice">USDA Choice</a> z plemene Black Angus, podávaný na horké plotýnce s restovanou cibulí, žampiony a paprikou, k tomu lahůdkové brambory s rozmarýnem a olivovým olejem, remuláda.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">468 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Rib Eye Steak, 300 g</dt>
-      <dd>Jeden z nejpopulárnějších steaků. Tenderizovaný steak z vysoce mramorovaného vysokého roštěnce grilovaný na vnitřní teplotu podle Vašeho přání, lahůdkové brambory s rozmarýnem a olivovým olejem, krémový špenát, remuláda.</dd>
+      <dd>Jeden z nejpopulárnějších steaků. <a var="inputvar-term-tenderizovani">Tenderizovaný</a> steak z vysoce mramorovaného vysokého roštěnce grilovaný na vnitřní teplotu podle Vašeho přání, lahůdkové brambory s rozmarýnem a olivovým olejem, krémový špenát, remuláda.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">529 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt>New York Strip Steak au Poivre, 300 g</dt>
-      <dd>Velice populární americký steak. Tenderizovaný steak z nízkého roštěnce s tukovým krytím, okořeněný čerstvě drceným pepřem, grilovaný na vnitřní teplotu podle Vašeho přání, lahůdkové brambory s rozmarýnem a olivovým olejem, krémový špenát, remuláda.</dd>
+      <dt>New York Strip <a var="inputvar-term-au-poivre">Steak au Poivre</a>, 300 g</dt>
+      <dd>Velice populární americký steak. <a var="inputvar-term-tenderizovani">Tenderizovaný</a> steak z nízkého roštěnce s tukovým krytím, okořeněný čerstvě drceným pepřem, grilovaný na vnitřní teplotu podle Vašeho přání, lahůdkové brambory s rozmarýnem a olivovým olejem, krémový špenát, remuláda.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">529 Kč</dd>
     </dl>
@@ -210,8 +209,8 @@
     <h class="break" id="sladkosti">Sladkosti</h>
     <desc>Nabízíme osvědčené restaurační dezerty, které sami vyrábíme podle autentických receptur. Dezerty připravujeme na objednávku, proto jsou vždy čerstvé a prvotřídní.</desc>
     <dl class="meal">
-      <dt>Hot Chocolate Fondant</dt>
-      <dd>Horký čokoládový fondant s dokonalou pistáciovou zmrzlinou Angelato a višněmi. (Příprava cca 15 minut.)</dd>
+      <dt>Hot Chocolate <a var="inputvar-term-fondant">Fondant</a></dt>
+      <dd>Horký čokoládový <a var="inputvar-term-fondant">fondant</a> s dokonalou pistáciovou zmrzlinou Angelato a višněmi. (Příprava cca 15 minut.)</dd>
       <dt class="price">Cena</dt>
       <dd class="price">119 Kč</dd>
     </dl>
@@ -223,7 +222,7 @@
     </dl>
     <dl class="meal">
       <dt>Carrot cake</dt>
-      <dd>Námi pečený, oblíbený americký dezert z mrkve, vlašských ořechů, kokosu a ananasu, čerstvý sýr, čerstvá šlehačka.</dd>
+      <dd>Námi pečený, oblíbený americký dezert z mrkve, vlašských ořechů, kokosu a ananasu, čerstvý sýr, čerstvá šlehačka.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">79 Kč</dd>
     </dl>
@@ -266,12 +265,12 @@
     </dl>
     <dl class="meal">
       <dt>Penne pomodoro</dt>
-      <dd>Italské těstoviny penne rigate s rajčaty, česnekem, bazalkou a smetanou</dd>
+      <dd>Italské těstoviny penne rigate s rajčaty, česnekem, bazalkou a smetanou</dd>
       <dd class="price">55 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt>Krůtí prso v rajčatové omáčce</dt>
-      <dd>Jasmínová rýže, krůtí maso vařené metodou <a var="inputvar-term-sous-vide">sous-vide</a>, krájené a prohřáté v rajčatové omáčce.</dd>
+      <dt>Krůtí prso v rajčatové omáčce</dt>
+      <dd>Jasmínová rýže, krůtí maso vařené metodou <a var="inputvar-term-sous-vide">sous-vide</a>, krájené a prohřáté v rajčatové omáčce.</dd>
       <dd class="price">69 Kč</dd>
     </dl>
     <h class="break" id="prilohy">Přílohy</h>
@@ -289,11 +288,11 @@
       <dd class="price">39 Kč</dd>
       <dt>Restovaná zelenina v čínském woku</dt>
       <dd class="price">65 Kč</dd>
-      <dt>Gratinované brambory</dt>
+      <dt><a var="inputvar-term-gratinovani">Gratinované</a> brambory</dt>
       <dd class="price">46 Kč</dd>
-      <dt>Zelný salát coleslaw malý</dt>
+      <dt>Zelný salát Coleslaw malý</dt>
       <dd class="price">26 Kč</dd>
-      <dt>Zelný salát coleslaw velký</dt>
+      <dt>Zelný salát Coleslaw velký</dt>
       <dd class="price">48 Kč</dd>
       <dt>Kukuřice O’Brien</dt>
       <dd class="price">45 Kč</dd>
@@ -322,7 +321,7 @@
       <dd class="price">29 Kč</dd>
       <dt>Česnekový dip</dt>
       <dd class="price">29 Kč</dd>
-      <dt>BBQ dip</dt>
+      <dt><a var="inputvar-term-bbq">BBQ</a> dip</dt>
       <dd class="price">29 Kč</dd>
       <dt>Kečup Heinz</dt>
       <dd class="price">24 Kč</dd>
@@ -341,7 +340,7 @@
       <li>Záměna jedné přílohy u každého jídla je možná podle Vašeho přání.</li>
       <li>Veškerá jídla vydáváme s sebou a za zabalení účtujeme 5 Kč.</li>
       <li>Dělení jídel je možné za příplatek 15 Kč.</li>
-      <li>Informace o konkrétních alergenech v pokrmech žádejte u obsluhy.</li>
+      <li>Informace o konkrétních alergenech v pokrmech žádejte u obsluhy.</li>
       <li>Jídla je možné objednat nejpozději hodinu před koncem otevírací doby.</li>
     </ul>
   
