--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
         <dd><span class="fas fa-3x fa-quote-right">i</span></dd>
       </dl>
       <dl class="citation">
-        <dt><img src="https://lh4.googleusercontent.com/-rILJWEwMOzw/AAAAAAAAAAI/AAAAAAAAAAA/tDnrmg_sDwc/w90-h90-p-rp-mo-br100/photo.jpg" alt="Vladimír Türkon"/></dt>
+        <dt><img src="/files/review/vladimir_turkon.jpg" alt="Vladimír Türkon"/></dt>
         <dd><q>Vynikající a ještě jednou vynikající jídlo. Stojí to za to a chilli polévka je také absolutně skvělá. Ceny jsou vyšší, ale adekvátní kvalitě a chuti jídla. Rád se budu vracet na skvělé steaky.</q></dd>
         <dd>— <a href="https://goo.gl/maps/UCpraVumFDuQj55g6">Vladimír Türkon</a></dd>
         <dd><span class="fas fa-3x fa-quote-right">i</span></dd>
       </dl>
       <dl class="citation">
-        <dt><img src="https://lh5.googleusercontent.com/-tk5tI148rdU/AAAAAAAAAAI/AAAAAAAAAAA/Y7mQrA1bnfE/w90-h90-p-rp-mo-ba3-br100/photo.jpg" alt="Vladimír Türkon"/></dt>
+        <dt><img src="/files/review/michal_dvorak.jpg" alt="Michal Dvořák"/></dt>
         <dd><q>Výborná polévka, úžasné steaky, profesionální a rychlá obsluha. Ceny odpovídající kvalitě.</q></dd>
         <dd>— <a href="https://goo.gl/maps/8m5L7xH42AyMMwPM9">Michal Dvořák</a></dd>
         <dd><span class="fas fa-3x fa-quote-right">i</span></dd>
