--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <dd><span class="fas fa-3x fa-quote-right">i</span></dd>
       </dl>
       <dl class="citation">
-        <dt><img src="/files/review/michal_dvorak.jpg" alt="Michal Dvořák"/></dt>
+        <dt><img src="/files/review/michal_dvorak.png" alt="Michal Dvořák"/></dt>
         <dd><q>Výborná polévka, úžasné steaky, profesionální a rychlá obsluha. Ceny odpovídající kvalitě.</q></dd>
         <dd>— <a href="https://goo.gl/maps/8m5L7xH42AyMMwPM9">Michal Dvořák</a></dd>
         <dd><span class="fas fa-3x fa-quote-right">i</span></dd>
