--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <dd><span class="fas fa-3x fa-quote-right">i</span></dd>
       </dl>
       <dl class="citation">
-        <dt><img src="/files/review/vladimir_turkon.jpg" alt="Vladimír Türkon"/></dt>
+        <dt><img src="/files/review/vladimir_turkon.png" alt="Vladimír Türkon"/></dt>
         <dd><q>Vynikající a ještě jednou vynikající jídlo. Stojí to za to a chilli polévka je také absolutně skvělá. Ceny jsou vyšší, ale adekvátní kvalitě a chuti jídla. Rád se budu vracet na skvělé steaky.</q></dd>
         <dd>— <a href="https://goo.gl/maps/UCpraVumFDuQj55g6">Vladimír Türkon</a></dd>
         <dd><span class="fas fa-3x fa-quote-right">i</span></dd>
